commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.arrowheadlength.yml
+++ b/docs/docs-ref-autogen/excel/excel.arrowheadlength.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: eb9a2bf0da34a644dcf6f857232b99addde232e8
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: 7c4baf930c35b0ecef2a39cc4c13964a8a58608d
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30307419"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575402"
 items:
-- uid: excel.Excel.ArrowHeadLength
-  summary: '<span data-ttu-id="02fd1-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02fd1-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+- uid: excel.Excel.ArrowheadLength
+  summary: '<span data-ttu-id="21fa3-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="21fa3-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   isPreview: true
-  name: Excel.ArrowHeadLength
-  fullName: Excel.ArrowHeadLength
+  name: Excel.ArrowheadLength
+  fullName: Excel.ArrowheadLength
   langs:
   - typeScript
   type: enum
   package: excel
   children:
-  - excel.Excel.ArrowHeadLength.long
-  - excel.Excel.ArrowHeadLength.medium
-  - excel.Excel.ArrowHeadLength.short
-- uid: excel.Excel.ArrowHeadLength.long
+  - excel.Excel.ArrowheadLength.long
+  - excel.Excel.ArrowheadLength.medium
+  - excel.Excel.ArrowheadLength.short
+- uid: excel.Excel.ArrowheadLength.long
   isPreview: true
   name: long
   fullName: long
@@ -27,7 +27,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Long\""
-- uid: excel.Excel.ArrowHeadLength.medium
+- uid: excel.Excel.ArrowheadLength.medium
   isPreview: true
   name: medium
   fullName: medium
@@ -35,7 +35,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Medium\""
-- uid: excel.Excel.ArrowHeadLength.short
+- uid: excel.Excel.ArrowheadLength.short
   isPreview: true
   name: short
   fullName: short
