--- a/docs/docs-ref-autogen/excel/excel.columnproperties.yml
+++ b/docs/docs-ref-autogen/excel/excel.columnproperties.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7606ffe1334908de0a1ed1ceb05131e55b3fe3fb
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 28a3a645dfa2cdee188b55a9ea96bd091cbc761c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114125"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575352"
 items:
 - uid: excel.Excel.ColumnProperties
-  summary: <span data-ttu-id="2dc85-101">表示 getColumnProperties 的返回属性。</span><span class="sxs-lookup"><span data-stu-id="2dc85-101">Represents the returned properties of getColumnProperties.</span></span>
+  summary: <span data-ttu-id="925eb-101">表示 getColumnProperties 的返回属性。</span><span class="sxs-lookup"><span data-stu-id="925eb-101">Represents the returned properties of getColumnProperties.</span></span>
   name: Excel.ColumnProperties
   fullName: Excel.ColumnProperties
   langs:
@@ -20,7 +20,6 @@ items:
   - excel.Excel.ColumnProperties.address
   - excel.Excel.ColumnProperties.addressLocal
   - excel.Excel.ColumnProperties.columnIndex
-  - excel.Excel.ColumnProperties.hasSpill
 - uid: excel.Excel.ColumnProperties.address
   name: address
   fullName: address
@@ -54,14 +53,3 @@ items:
     return:
       type:
       - number
-- uid: excel.Excel.ColumnProperties.hasSpill
-  name: hasSpill
-  fullName: hasSpill
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hasSpill?: boolean;'
-    return:
-      type:
-      - boolean
