--- a/docs/docs-ref-autogen/excel/excel.geometricshape.yml
+++ b/docs/docs-ref-autogen/excel/excel.geometricshape.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 65fd258fa2442fdeb2c8240188393d4e466a4049
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 46a72abc0bc228845244ddd4f1cb7cdd3e094ee3
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107363"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575702"
 items:
 - uid: excel.Excel.GeometricShape
   summary: >-
-    <span data-ttu-id="35256-101">代表工作表中的一个几何形状对象。</span><span class="sxs-lookup"><span data-stu-id="35256-101">Represents a geometric shape object inside a worksheet.</span></span> <span data-ttu-id="35256-102">几何形状可以是 Excel 中的线条、矩形、块箭头、公式、流程图、开始、横幅、标注或基本形状。</span><span class="sxs-lookup"><span data-stu-id="35256-102">A geometric shape can be a line, rectangle, block arrow, equation, flowchart, start, banner, callout or basic shape in Excel.</span></span>
+    <span data-ttu-id="6ddfb-101">代表工作表中的几何形状。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-101">Represents a geometric shape inside a worksheet.</span></span> <span data-ttu-id="6ddfb-102">在 Excel 中, 几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-102">A geometric shape can be a rectangle, block arrow, equation symbol, flowchart item, star, banner, callout, or any other basic shape in Excel.</span></span>
 
 
-    <span data-ttu-id="35256-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35256-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ddfb-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ddfb-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.GeometricShape
   fullName: Excel.GeometricShape
@@ -30,7 +30,7 @@ items:
   - excel.Excel.GeometricShape.shape
   - excel.Excel.GeometricShape.toJSON
 - uid: excel.Excel.GeometricShape.context
-  summary: <span data-ttu-id="35256-104">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="35256-104">The request context associated with the object.</span></span> <span data-ttu-id="35256-105">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="35256-105">This connects the add-in's process to the Office host application's process.</span></span>
+  summary: <span data-ttu-id="6ddfb-104">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-104">The request context associated with the object.</span></span> <span data-ttu-id="6ddfb-105">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-105">This connects the add-in's process to the Office host application's process.</span></span>
   isPreview: true
   name: context
   fullName: context
@@ -44,10 +44,10 @@ items:
       - RequestContext
 - uid: excel.Excel.GeometricShape.id
   summary: >-
-    <span data-ttu-id="35256-106">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="35256-106">Represents the shape identifier.</span></span> <span data-ttu-id="35256-107">只读。</span><span class="sxs-lookup"><span data-stu-id="35256-107">Read-only.</span></span>
+    <span data-ttu-id="6ddfb-106">返回形状标识符。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-106">Returns the shape identifier.</span></span> <span data-ttu-id="6ddfb-107">只读。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-107">Read-only.</span></span>
 
 
-    <span data-ttu-id="35256-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35256-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ddfb-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ddfb-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -60,18 +60,18 @@ items:
       type:
       - string
 - uid: excel.Excel.GeometricShape.load
-  summary: <span data-ttu-id="35256-109">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="35256-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="35256-110">在读取属性之前, 必须先调用 "context, sync ()"。</span><span class="sxs-lookup"><span data-stu-id="35256-110">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="6ddfb-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="6ddfb-110">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-110">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="35256-111">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="35256-111">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="6ddfb-111">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="6ddfb-111">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="35256-112">`load(option?: string | string[]): Excel.GeometricShape`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="35256-112">`load(option?: string | string[]): Excel.GeometricShape` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+    <span data-ttu-id="6ddfb-112">`load(option?: string | string[]): Excel.GeometricShape`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-112">`load(option?: string | string[]): Excel.GeometricShape` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
 
 
-    <span data-ttu-id="35256-113">`load(option?: { select?: string; expand?: string; }): Excel.GeometricShape`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="35256-113">`load(option?: { select?: string; expand?: string; }): Excel.GeometricShape` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="6ddfb-113">`load(option?: { select?: string; expand?: string; }): Excel.GeometricShape`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-113">`load(option?: { select?: string; expand?: string; }): Excel.GeometricShape` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="35256-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GeometricShape`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="35256-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GeometricShape` - Only available on collection types.</span></span> <span data-ttu-id="35256-115">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="35256-115">It is similar to the preceding signature.</span></span> <span data-ttu-id="35256-116">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="35256-116">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="35256-117">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="35256-117">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="35256-118">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="35256-118">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="6ddfb-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GeometricShape`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GeometricShape` - Only available on collection types.</span></span> <span data-ttu-id="6ddfb-115">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-115">It is similar to the preceding signature.</span></span> <span data-ttu-id="6ddfb-116">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-116">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="6ddfb-117">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-117">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="6ddfb-118">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-118">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   isPreview: true
   name: load(option)
   fullName: load(option)
@@ -90,7 +90,7 @@ items:
       type:
       - excel.Excel.Interfaces.GeometricShapeLoadOptions
 - uid: excel.Excel.GeometricShape.load_1
-  summary: <span data-ttu-id="35256-119">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="35256-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="35256-120">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="35256-120">You must call `context.sync()` before reading the properties.</span></span>
+  summary: <span data-ttu-id="6ddfb-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="6ddfb-120">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-120">You must call `context.sync()` before reading the properties.</span></span>
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -105,11 +105,11 @@ items:
       description: ''
     parameters:
     - id: propertyNames
-      description: <span data-ttu-id="35256-121">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="35256-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="6ddfb-121">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.GeometricShape.load_2
-  summary: <span data-ttu-id="35256-122">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="35256-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="35256-123">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="35256-123">You must call `context.sync()` before reading the properties.</span></span>
+  summary: <span data-ttu-id="6ddfb-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="6ddfb-123">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-123">You must call `context.sync()` before reading the properties.</span></span>
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -124,15 +124,15 @@ items:
       description: ''
     parameters:
     - id: propertyNamesAndPaths
-      description: <span data-ttu-id="35256-124">其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="35256-124">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      description: <span data-ttu-id="6ddfb-124">其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-124">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
       type:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.GeometricShape.shape
   summary: >-
-    <span data-ttu-id="35256-125">返回 "几何" 形状的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="35256-125">Returns the shape object for the geometric shape.</span></span> <span data-ttu-id="35256-126">只读。</span><span class="sxs-lookup"><span data-stu-id="35256-126">Read-only.</span></span>
+    <span data-ttu-id="6ddfb-125">返回 "几何" 形状的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-125">Returns the Shape object for the geometric shape.</span></span> <span data-ttu-id="6ddfb-126">只读。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-126">Read-only.</span></span>
 
 
-    <span data-ttu-id="35256-127">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35256-127">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ddfb-127">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ddfb-127">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shape
   fullName: shape
@@ -145,7 +145,7 @@ items:
       type:
       - excel.Excel.Shape
 - uid: excel.Excel.GeometricShape.toJSON
-  summary: <span data-ttu-id="35256-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。</span><span class="sxs-lookup"><span data-stu-id="35256-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="35256-129">(`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 GeometricShape 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.GeometricShapeData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="35256-129">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.GeometricShape object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.GeometricShapeData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
+  summary: <span data-ttu-id="6ddfb-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="6ddfb-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="6ddfb-129">.</span><span class="sxs-lookup"><span data-stu-id="6ddfb-129"></span></span> <span data-ttu-id="6ddfb-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="6ddfb-130"></span></span><!-- --><span data-ttu-id="6ddfb-131">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 GeometricShape 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.GeometricShapeData`</span><span class="sxs-lookup"><span data-stu-id="6ddfb-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.GeometricShape object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.GeometricShapeData`</span></span><!-- --><span data-ttu-id="6ddfb-132">), 其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="6ddfb-132">) that contains shallow copies of any loaded child properties from the original object.</span></span>
   isPreview: true
   name: toJSON()
   fullName: toJSON()
