--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 76e1c07b73ca4305ec581a2c917cd2f38bf5368f
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: d534a52f04ea4a577b2f6f933422d5904df47d2b
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115812"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575240"
 items:
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions
   summary: >-
-    <span data-ttu-id="36530-101">代表工作簿中的单元格批注答复对象。</span><span class="sxs-lookup"><span data-stu-id="36530-101">Represents a cell comment reply object in the workbook.</span></span>
+    <span data-ttu-id="4ac60-101">代表工作簿中的单元格批注答复对象。</span><span class="sxs-lookup"><span data-stu-id="4ac60-101">Represents a cell comment reply object in the workbook.</span></span>
 
 
-    <span data-ttu-id="36530-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36530-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ac60-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.CommentReplyLoadOptions
   fullName: Excel.Interfaces.CommentReplyLoadOptions
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentReplyLoadOptions.$all
+  - excel.Excel.Interfaces.CommentReplyLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentReplyLoadOptions.authorName
   - excel.Excel.Interfaces.CommentReplyLoadOptions.content
+  - excel.Excel.Interfaces.CommentReplyLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentReplyLoadOptions.id
   - excel.Excel.Interfaces.CommentReplyLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.$all
@@ -36,12 +39,46 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentReplyLoadOptions.authorEmail
+  summary: >-
+    <span data-ttu-id="4ac60-103">获取批注答复的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="4ac60-103">Get author email of the comment reply.</span></span>
+
+
+    <span data-ttu-id="4ac60-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentReplyLoadOptions.authorName
+  summary: >-
+    <span data-ttu-id="4ac60-105">获取批注答复的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="4ac60-105">Get author name of the comment reply.</span></span>
+
+
+    <span data-ttu-id="4ac60-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.content
   summary: >-
-    <span data-ttu-id="36530-103">获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="36530-103">Get/Set the content.</span></span>
+    <span data-ttu-id="4ac60-107">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="4ac60-107">Get or set the content.</span></span>
 
 
-    <span data-ttu-id="36530-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36530-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ac60-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
@@ -53,12 +90,29 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentReplyLoadOptions.creationDate
+  summary: >-
+    <span data-ttu-id="4ac60-109">获取批注答复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="4ac60-109">Get creation time of the comment reply.</span></span>
+
+
+    <span data-ttu-id="4ac60-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.id
   summary: >-
-    <span data-ttu-id="36530-105">表示批注答复标识符。</span><span class="sxs-lookup"><span data-stu-id="36530-105">Represents the comment reply identifier.</span></span> <span data-ttu-id="36530-106">只读。</span><span class="sxs-lookup"><span data-stu-id="36530-106">Read-only.</span></span>
+    <span data-ttu-id="4ac60-111">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="4ac60-111">Represents the comment reply identifier.</span></span> <span data-ttu-id="4ac60-112">只读。</span><span class="sxs-lookup"><span data-stu-id="4ac60-112">Read-only.</span></span>
 
 
-    <span data-ttu-id="36530-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36530-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ac60-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -72,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.isParent
   summary: >-
-    <span data-ttu-id="36530-108">表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="36530-108">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="36530-109">在此处始终返回 false。</span><span class="sxs-lookup"><span data-stu-id="36530-109">Always return false here.</span></span> <span data-ttu-id="36530-110">只读。</span><span class="sxs-lookup"><span data-stu-id="36530-110">Read-only.</span></span>
+    <span data-ttu-id="4ac60-114">表示它是批注线程还是回复。</span><span class="sxs-lookup"><span data-stu-id="4ac60-114">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="4ac60-115">在此处始终返回 False。</span><span class="sxs-lookup"><span data-stu-id="4ac60-115">Always return false here.</span></span> <span data-ttu-id="4ac60-116">只读。</span><span class="sxs-lookup"><span data-stu-id="4ac60-116">Read-only.</span></span>
 
 
-    <span data-ttu-id="36530-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36530-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ac60-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ac60-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isParent
   fullName: isParent
