--- a/docs/docs-ref-autogen/excel/excel.interfaces.geometricshapeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.geometricshapeloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 456e5c0bb9099ef0c8dc4d7bd49463e08d5795b0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 033602026acda0f436435c061243d2d858a27609
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115049"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575576"
 items:
 - uid: excel.Excel.Interfaces.GeometricShapeLoadOptions
   summary: >-
-    <span data-ttu-id="2258b-101">代表工作表中的一个几何形状对象。</span><span class="sxs-lookup"><span data-stu-id="2258b-101">Represents a geometric shape object inside a worksheet.</span></span> <span data-ttu-id="2258b-102">几何形状可以是 Excel 中的线条、矩形、块箭头、公式、流程图、开始、横幅、标注或基本形状。</span><span class="sxs-lookup"><span data-stu-id="2258b-102">A geometric shape can be a line, rectangle, block arrow, equation, flowchart, start, banner, callout or basic shape in Excel.</span></span>
+    <span data-ttu-id="277f8-101">代表工作表中的几何形状。</span><span class="sxs-lookup"><span data-stu-id="277f8-101">Represents a geometric shape inside a worksheet.</span></span> <span data-ttu-id="277f8-102">在 Excel 中, 几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。</span><span class="sxs-lookup"><span data-stu-id="277f8-102">A geometric shape can be a rectangle, block arrow, equation symbol, flowchart item, star, banner, callout, or any other basic shape in Excel.</span></span>
 
 
-    <span data-ttu-id="2258b-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2258b-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="277f8-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="277f8-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.GeometricShapeLoadOptions
   fullName: Excel.Interfaces.GeometricShapeLoadOptions
@@ -37,10 +37,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GeometricShapeLoadOptions.id
   summary: >-
-    <span data-ttu-id="2258b-104">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="2258b-104">Represents the shape identifier.</span></span> <span data-ttu-id="2258b-105">只读。</span><span class="sxs-lookup"><span data-stu-id="2258b-105">Read-only.</span></span>
+    <span data-ttu-id="277f8-104">返回形状标识符。</span><span class="sxs-lookup"><span data-stu-id="277f8-104">Returns the shape identifier.</span></span> <span data-ttu-id="277f8-105">只读。</span><span class="sxs-lookup"><span data-stu-id="277f8-105">Read-only.</span></span>
 
 
-    <span data-ttu-id="2258b-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2258b-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="277f8-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="277f8-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -54,10 +54,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GeometricShapeLoadOptions.shape
   summary: >-
-    <span data-ttu-id="2258b-107">返回 "几何" 形状的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="2258b-107">Returns the shape object for the geometric shape.</span></span>
+    <span data-ttu-id="277f8-107">返回 "几何" 形状的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="277f8-107">Returns the Shape object for the geometric shape.</span></span>
 
 
-    <span data-ttu-id="2258b-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2258b-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="277f8-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="277f8-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shape
   fullName: shape
