--- a/docs/docs-ref-autogen/excel/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.imagedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5a2d32e8f11fa1e1f3fa1f9b483c8b2be630fec0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 9afeeb6758f936c5f544c52aac18020df43ed475
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115630"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575436"
 items:
 - uid: excel.Excel.Interfaces.ImageData
-  summary: <span data-ttu-id="de672-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="de672-101">An interface describing the data returned by calling "image.toJSON()".</span></span>
+  summary: <span data-ttu-id="47a93-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="47a93-101">An interface describing the data returned by calling "image.toJSON()".</span></span>
   name: Excel.Interfaces.ImageData
   fullName: Excel.Interfaces.ImageData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.ImageData.id
 - uid: excel.Excel.Interfaces.ImageData.format
   summary: >-
-    <span data-ttu-id="de672-102">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="de672-102">Returns the format for the image.</span></span> <span data-ttu-id="de672-103">只读。</span><span class="sxs-lookup"><span data-stu-id="de672-103">Read-only.</span></span>
+    <span data-ttu-id="47a93-102">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="47a93-102">Returns the format of the image.</span></span> <span data-ttu-id="47a93-103">只读。</span><span class="sxs-lookup"><span data-stu-id="47a93-103">Read-only.</span></span>
 
 
-    <span data-ttu-id="de672-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de672-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="47a93-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="47a93-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: format
   fullName: format
@@ -36,10 +36,10 @@ items:
       - Excel.PictureFormat | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"
 - uid: excel.Excel.Interfaces.ImageData.id
   summary: >-
-    <span data-ttu-id="de672-105">代表 image 对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="de672-105">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="de672-106">只读。</span><span class="sxs-lookup"><span data-stu-id="de672-106">Read-only.</span></span>
+    <span data-ttu-id="47a93-105">表示图像对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="47a93-105">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="47a93-106">只读。</span><span class="sxs-lookup"><span data-stu-id="47a93-106">Read-only.</span></span>
 
 
-    <span data-ttu-id="de672-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de672-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="47a93-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="47a93-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
