--- a/docs/docs-ref-autogen/excel/excel.interfaces.imageloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.imageloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9b57917e42d7346e502e90bb15f46b245a4e0000
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0d4e280de2d5c3fa3924a30dbc4fe2ae241be201
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109330"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575219"
 items:
 - uid: excel.Excel.Interfaces.ImageLoadOptions
   summary: >-
-    <span data-ttu-id="7044e-101">代表工作表中的图像对象。</span><span class="sxs-lookup"><span data-stu-id="7044e-101">Represents an image object in the worksheet.</span></span>
+    <span data-ttu-id="99a57-101">代表工作表中的图像。</span><span class="sxs-lookup"><span data-stu-id="99a57-101">Represents an image in the worksheet.</span></span> <span data-ttu-id="99a57-102">若要获取相应的 Shape 对象, 请使用 Image. Shape。</span><span class="sxs-lookup"><span data-stu-id="99a57-102">To get the corresponding Shape object, use Image.shape.</span></span>
 
 
-    <span data-ttu-id="7044e-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7044e-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99a57-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99a57-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.ImageLoadOptions
   fullName: Excel.Interfaces.ImageLoadOptions
@@ -38,10 +38,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ImageLoadOptions.format
   summary: >-
-    <span data-ttu-id="7044e-103">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="7044e-103">Returns the format for the image.</span></span> <span data-ttu-id="7044e-104">只读。</span><span class="sxs-lookup"><span data-stu-id="7044e-104">Read-only.</span></span>
+    <span data-ttu-id="99a57-104">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="99a57-104">Returns the format of the image.</span></span> <span data-ttu-id="99a57-105">只读。</span><span class="sxs-lookup"><span data-stu-id="99a57-105">Read-only.</span></span>
 
 
-    <span data-ttu-id="7044e-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7044e-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99a57-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99a57-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: format
   fullName: format
@@ -55,10 +55,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ImageLoadOptions.id
   summary: >-
-    <span data-ttu-id="7044e-106">代表 image 对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="7044e-106">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="7044e-107">只读。</span><span class="sxs-lookup"><span data-stu-id="7044e-107">Read-only.</span></span>
+    <span data-ttu-id="99a57-107">表示图像对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="99a57-107">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="99a57-108">只读。</span><span class="sxs-lookup"><span data-stu-id="99a57-108">Read-only.</span></span>
 
 
-    <span data-ttu-id="7044e-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7044e-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99a57-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99a57-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -72,10 +72,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ImageLoadOptions.shape
   summary: >-
-    <span data-ttu-id="7044e-109">返回图像的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="7044e-109">Returns the shape object for the image.</span></span>
+    <span data-ttu-id="99a57-110">返回与图像关联的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="99a57-110">Returns the Shape object associated with the image.</span></span>
 
 
-    <span data-ttu-id="7044e-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7044e-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99a57-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99a57-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shape
   fullName: shape
