--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefillloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c69c4da2f585ae6dfc9555937d0ce9724833518b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: db114948df34bda06f3b04b904c7aaf8a98225ad
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107867"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575457"
 items:
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions
   summary: >-
-    <span data-ttu-id="b0f8f-101">代表 shape 对象的填充格式。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-101">Represents the fill formatting for a shape object.</span></span>
+    <span data-ttu-id="6ba68-101">代表 shape 对象的填充格式。</span><span class="sxs-lookup"><span data-stu-id="6ba68-101">Represents the fill formatting of a shape object.</span></span>
 
 
-    <span data-ttu-id="b0f8f-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b0f8f-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ba68-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ba68-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.ShapeFillLoadOptions
   fullName: Excel.Interfaces.ShapeFillLoadOptions
@@ -21,7 +21,7 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.ShapeFillLoadOptions.$all
-  - excel.Excel.Interfaces.ShapeFillLoadOptions.foreColor
+  - excel.Excel.Interfaces.ShapeFillLoadOptions.foregroundColor
   - excel.Excel.Interfaces.ShapeFillLoadOptions.transparency
   - excel.Excel.Interfaces.ShapeFillLoadOptions.type
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions.$all
@@ -36,29 +36,29 @@ items:
     return:
       type:
       - boolean
-- uid: excel.Excel.Interfaces.ShapeFillLoadOptions.foreColor
+- uid: excel.Excel.Interfaces.ShapeFillLoadOptions.foregroundColor
   summary: >-
-    <span data-ttu-id="b0f8f-103">代表形状填充的前景色, 格式为\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-103">Represents the shape fill fore color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+    <span data-ttu-id="6ba68-103">代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="6ba68-103">Represents the shape fill foreground color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
 
 
-    <span data-ttu-id="b0f8f-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b0f8f-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ba68-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ba68-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
-  name: foreColor
-  fullName: foreColor
+  name: foregroundColor
+  fullName: foregroundColor
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'foreColor?: boolean;'
+    content: 'foregroundColor?: boolean;'
     return:
       type:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions.transparency
   summary: >-
-    <span data-ttu-id="b0f8f-105">以 0.0 (不透明) 到 1.0 (清除) 的值的形式返回或设置指定填充的透明度。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-105">Returns or sets the degree of transparency of the specified fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="b0f8f-106">对于不支持 API 的形状类型或具有不一致透明度的特殊填充类型, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-106">For API not supported shape types or special fill type with inconsistent transparencies, return null.</span></span> <span data-ttu-id="b0f8f-107">例如, 渐变填充类型可能具有不一致的透明胶片。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-107">For example, gradient fill type could have inconsistent transparencies.</span></span>
+    <span data-ttu-id="6ba68-105">以 0.0 (不透明) 到 1.0 (清除) 中的值的形式返回或设置填充的透明度百分比。</span><span class="sxs-lookup"><span data-stu-id="6ba68-105">Returns or sets the transparency percentage of the fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="6ba68-106">如果形状类型不支持透明度或形状填充的透明度不一致, 例如渐变填充类型, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="6ba68-106">Returns null if the shape type does not support transparency or the shape fill has inconsistent transparency, such as with a gradient fill type.</span></span>
 
 
-    <span data-ttu-id="b0f8f-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b0f8f-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ba68-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ba68-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: transparency
   fullName: transparency
@@ -72,10 +72,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions.type
   summary: >-
-    <span data-ttu-id="b0f8f-109">返回形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-109">Returns the fill type of the shape.</span></span> <span data-ttu-id="b0f8f-110">只读。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-110">Read-only.</span></span> <span data-ttu-id="b0f8f-111">有关详细信息, 请参阅 ShapeFillType。</span><span class="sxs-lookup"><span data-stu-id="b0f8f-111">See Excel.ShapeFillType for detail.</span></span>
+    <span data-ttu-id="6ba68-108">返回形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="6ba68-108">Returns the fill type of the shape.</span></span> <span data-ttu-id="6ba68-109">只读。</span><span class="sxs-lookup"><span data-stu-id="6ba68-109">Read-only.</span></span> <span data-ttu-id="6ba68-110">有关详细信息, 请参阅 ShapeFillType。</span><span class="sxs-lookup"><span data-stu-id="6ba68-110">See Excel.ShapeFillType for details.</span></span>
 
 
-    <span data-ttu-id="b0f8f-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b0f8f-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ba68-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ba68-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: type
   fullName: type
