--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefillupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 276865e4347f74dac5f896e60317ef32d14f5e27
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0bdfd02c55effe953e57bd789957540802198cd6
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114531"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575632"
 items:
 - uid: excel.Excel.Interfaces.ShapeFillUpdateData
-  summary: <span data-ttu-id="2907f-101">用于更新 ShapeFill 对象上的数据的接口, 用于在 "ShapeFill" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="2907f-101">An interface for updating data on the ShapeFill object, for use in "shapeFill.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="cd334-101">一个用于更新 ShapeFill 对象上的数据的接口, 可用于 "ShapeFill (</span><span class="sxs-lookup"><span data-stu-id="cd334-101">An interface for updating data on the ShapeFill object, for use in "shapeFill.set(</span></span><!-- --><span data-ttu-id="cd334-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="cd334-102"></span></span><!-- --><span data-ttu-id="cd334-103">)".</span><span class="sxs-lookup"><span data-stu-id="cd334-103"></span></span>
   name: Excel.Interfaces.ShapeFillUpdateData
   fullName: Excel.Interfaces.ShapeFillUpdateData
   langs:
@@ -15,31 +15,31 @@ items:
   type: interface
   package: excel
   children:
-  - excel.Excel.Interfaces.ShapeFillUpdateData.foreColor
+  - excel.Excel.Interfaces.ShapeFillUpdateData.foregroundColor
   - excel.Excel.Interfaces.ShapeFillUpdateData.transparency
-- uid: excel.Excel.Interfaces.ShapeFillUpdateData.foreColor
+- uid: excel.Excel.Interfaces.ShapeFillUpdateData.foregroundColor
   summary: >-
-    <span data-ttu-id="2907f-102">代表形状填充的前景色, 格式为\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="2907f-102">Represents the shape fill fore color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+    <span data-ttu-id="cd334-104">代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="cd334-104">Represents the shape fill foreground color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
 
 
-    <span data-ttu-id="2907f-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2907f-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="cd334-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd334-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
-  name: foreColor
-  fullName: foreColor
+  name: foregroundColor
+  fullName: foregroundColor
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'foreColor?: string;'
+    content: 'foregroundColor?: string;'
     return:
       type:
       - string
 - uid: excel.Excel.Interfaces.ShapeFillUpdateData.transparency
   summary: >-
-    <span data-ttu-id="2907f-104">以 0.0 (不透明) 到 1.0 (清除) 的值的形式返回或设置指定填充的透明度。</span><span class="sxs-lookup"><span data-stu-id="2907f-104">Returns or sets the degree of transparency of the specified fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="2907f-105">对于不支持 API 的形状类型或具有不一致透明度的特殊填充类型, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="2907f-105">For API not supported shape types or special fill type with inconsistent transparencies, return null.</span></span> <span data-ttu-id="2907f-106">例如, 渐变填充类型可能具有不一致的透明胶片。</span><span class="sxs-lookup"><span data-stu-id="2907f-106">For example, gradient fill type could have inconsistent transparencies.</span></span>
+    <span data-ttu-id="cd334-106">以 0.0 (不透明) 到 1.0 (清除) 中的值的形式返回或设置填充的透明度百分比。</span><span class="sxs-lookup"><span data-stu-id="cd334-106">Returns or sets the transparency percentage of the fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="cd334-107">如果形状类型不支持透明度或形状填充的透明度不一致, 例如渐变填充类型, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="cd334-107">Returns null if the shape type does not support transparency or the shape fill has inconsistent transparency, such as with a gradient fill type.</span></span>
 
 
-    <span data-ttu-id="2907f-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2907f-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="cd334-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd334-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: transparency
   fullName: transparency
