--- a/docs/docs-ref-autogen/excel/excel.interfaces.textrangeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.textrangeloadoptions.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 11828adfb66897e365c1295c5e8c45bdb2ad4ccd
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 6c8f4715f0bc8a6dfc3c0b01339c8bd33dfaed25
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106453"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575429"
 items:
 - uid: excel.Excel.Interfaces.TextRangeLoadOptions
-  summary: '<span data-ttu-id="c7e0d-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7e0d-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="a173a-101">包含附加到形状上的文本，以及用于操作文本的属性和方法。</span><span class="sxs-lookup"><span data-stu-id="a173a-101">Contains the text that is attached to a shape, in addition to properties and methods for manipulating the text.</span></span>
+
+
+    <span data-ttu-id="a173a-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a173a-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.TextRangeLoadOptions
   fullName: Excel.Interfaces.TextRangeLoadOptions
@@ -33,10 +37,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.TextRangeLoadOptions.font
   summary: >-
-    <span data-ttu-id="c7e0d-102">返回一个 ShapeFont 对象, 该对象代表文字范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="c7e0d-102">Returns a ShapeFont object that represents the font attributes for the text range.</span></span>
+    <span data-ttu-id="a173a-103">返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="a173a-103">Returns a ShapeFont object that represents the font attributes for the text range.</span></span>
 
 
-    <span data-ttu-id="c7e0d-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7e0d-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a173a-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a173a-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: font
   fullName: font
@@ -50,10 +54,10 @@ items:
       - excel.Excel.Interfaces.ShapeFontLoadOptions
 - uid: excel.Excel.Interfaces.TextRangeLoadOptions.text
   summary: >-
-    <span data-ttu-id="c7e0d-104">代表文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="c7e0d-104">Represents the plain text content of the text range.</span></span>
+    <span data-ttu-id="a173a-105">表示文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="a173a-105">Represents the plain text content of the text range.</span></span>
 
 
-    <span data-ttu-id="c7e0d-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7e0d-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a173a-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a173a-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: text
   fullName: text
