--- a/docs/docs-ref-autogen/excel/excel.shapeactivatedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapeactivatedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 88d6654df35897ebaec631e560556af74d438bcb
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ded85681b1c49741a24a87c3e279992f61e53e86
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115833"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575933"
 items:
 - uid: excel.Excel.ShapeActivatedEventArgs
   summary: >-
-    <span data-ttu-id="6075c-101">提供有关引发了激活事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="6075c-101">Provides information about the shape that raised the Activated event.</span></span>
+    <span data-ttu-id="068fa-101">提供有关引发了激活事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="068fa-101">Provides information about the shape that raised the Activated event.</span></span>
 
 
-    <span data-ttu-id="6075c-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6075c-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="068fa-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="068fa-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeActivatedEventArgs
   fullName: Excel.ShapeActivatedEventArgs
@@ -25,10 +25,10 @@ items:
   - excel.Excel.ShapeActivatedEventArgs.worksheetId
 - uid: excel.Excel.ShapeActivatedEventArgs.shapeId
   summary: >-
-    <span data-ttu-id="6075c-103">获取激活的形状的 id。</span><span class="sxs-lookup"><span data-stu-id="6075c-103">Gets the id of the shape that is activated.</span></span>
+    <span data-ttu-id="068fa-103">获取激活的形状的 id。</span><span class="sxs-lookup"><span data-stu-id="068fa-103">Gets the id of the activated shape.</span></span>
 
 
-    <span data-ttu-id="6075c-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6075c-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="068fa-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="068fa-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shapeId
   fullName: shapeId
@@ -42,10 +42,10 @@ items:
       - string
 - uid: excel.Excel.ShapeActivatedEventArgs.type
   summary: >-
-    <span data-ttu-id="6075c-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="6075c-105">Gets the type of the event.</span></span> <span data-ttu-id="6075c-106">有关详细信息, 请参阅 "Excel. 事件"。</span><span class="sxs-lookup"><span data-stu-id="6075c-106">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="068fa-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="068fa-105">Gets the type of the event.</span></span> <span data-ttu-id="068fa-106">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="068fa-106">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="6075c-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6075c-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="068fa-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="068fa-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: type
   fullName: type
@@ -59,10 +59,10 @@ items:
       - "\"ShapeActivated\""
 - uid: excel.Excel.ShapeActivatedEventArgs.worksheetId
   summary: >-
-    <span data-ttu-id="6075c-108">获取在其中激活形状的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="6075c-108">Gets the id of the worksheet in which the shape is activated.</span></span>
+    <span data-ttu-id="068fa-108">获取其中的形状已启用的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="068fa-108">Gets the id of the worksheet in which the shape is activated.</span></span>
 
 
-    <span data-ttu-id="6075c-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6075c-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="068fa-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="068fa-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: worksheetId
   fullName: worksheetId
