--- a/docs/docs-ref-autogen/excel/excel.shapeautosize.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapeautosize.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0ab128cf57aee0988fcc52af5295a336c755559d
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: e0942d5e5af8e4e37e2618861256a21666e9f84f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109218"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575053"
 items:
 - uid: excel.Excel.ShapeAutoSize
-  summary: '<span data-ttu-id="735ca-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="735ca-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="b2187-101">确定允许的自动调整大小的类型。</span><span class="sxs-lookup"><span data-stu-id="b2187-101">Determines the type of automatic sizing allowed.</span></span>
+
+
+    <span data-ttu-id="b2187-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2187-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeAutoSize
   fullName: Excel.ShapeAutoSize
@@ -21,6 +25,7 @@ items:
   - excel.Excel.ShapeAutoSize.autoSizeShapeToFitText
   - excel.Excel.ShapeAutoSize.autoSizeTextToFitShape
 - uid: excel.Excel.ShapeAutoSize.autoSizeMixed
+  summary: <span data-ttu-id="b2187-103">使用自动调整大小方案的组合。</span><span class="sxs-lookup"><span data-stu-id="b2187-103">A combination of automatic sizing schemes are used.</span></span>
   isPreview: true
   name: autoSizeMixed
   fullName: autoSizeMixed
@@ -29,6 +34,7 @@ items:
   type: field
   numericValue: "\"AutoSizeMixed\""
 - uid: excel.Excel.ShapeAutoSize.autoSizeNone
+  summary: <span data-ttu-id="b2187-104">不自动调整大小。</span><span class="sxs-lookup"><span data-stu-id="b2187-104">No autosizing.</span></span>
   isPreview: true
   name: autoSizeNone
   fullName: autoSizeNone
@@ -37,6 +43,7 @@ items:
   type: field
   numericValue: "\"AutoSizeNone\""
 - uid: excel.Excel.ShapeAutoSize.autoSizeShapeToFitText
+  summary: <span data-ttu-id="b2187-105">根据文本调整形状。</span><span class="sxs-lookup"><span data-stu-id="b2187-105">The shape is adjusted to fit the text.</span></span>
   isPreview: true
   name: autoSizeShapeToFitText
   fullName: autoSizeShapeToFitText
@@ -45,6 +52,7 @@ items:
   type: field
   numericValue: "\"AutoSizeShapeToFitText\""
 - uid: excel.Excel.ShapeAutoSize.autoSizeTextToFitShape
+  summary: <span data-ttu-id="b2187-106">根据形状调整文本。</span><span class="sxs-lookup"><span data-stu-id="b2187-106">The text is adjusted to fit the shape.</span></span>
   isPreview: true
   name: autoSizeTextToFitShape
   fullName: autoSizeTextToFitShape
