--- a/docs/docs-ref-autogen/excel/excel.cellproperties.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellproperties.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 94f12ee5e4112387f3974b77eab9f35cdffecdde
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 14705ed189ff494a46dd89b87cf4a723b724c17c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108700"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575325"
 items:
 - uid: excel.Excel.CellProperties
-  summary: <span data-ttu-id="ebab1-101">表示 getCellProperties 的返回属性。</span><span class="sxs-lookup"><span data-stu-id="ebab1-101">Represents the returned properties of getCellProperties.</span></span>
+  summary: <span data-ttu-id="d430d-101">表示 getCellProperties 的返回属性。</span><span class="sxs-lookup"><span data-stu-id="d430d-101">Represents the returned properties of getCellProperties.</span></span>
   name: Excel.CellProperties
   fullName: Excel.CellProperties
   langs:
@@ -19,7 +19,6 @@ items:
   children:
   - excel.Excel.CellProperties.address
   - excel.Excel.CellProperties.addressLocal
-  - excel.Excel.CellProperties.hasSpill
   - excel.Excel.CellProperties.hidden
 - uid: excel.Excel.CellProperties.address
   name: address
@@ -43,17 +42,6 @@ items:
     return:
       type:
       - string
-- uid: excel.Excel.CellProperties.hasSpill
-  name: hasSpill
-  fullName: hasSpill
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hasSpill?: boolean;'
-    return:
-      type:
-      - boolean
 - uid: excel.Excel.CellProperties.hidden
   name: hidden
   fullName: hidden
