--- a/docs/docs-ref-autogen/excel/excel.geometricshapetype.yml
+++ b/docs/docs-ref-autogen/excel/excel.geometricshapetype.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 85e488e553556df6b0d19a59aa03e67ee232d4c7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: c412b811d726f6f200be1a1bd1c4e75e3342edb1
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106754"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575527"
 items:
 - uid: excel.Excel.GeometricShapeType
-  summary: '<span data-ttu-id="8db6b-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8db6b-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="80f48-101">指定 GeometricShape 对象的形状类型。</span><span class="sxs-lookup"><span data-stu-id="80f48-101">Specifies the shape type for a GeometricShape object.</span></span>
+
+
+    <span data-ttu-id="80f48-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80f48-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.GeometricShapeType
   fullName: Excel.GeometricShapeType
