--- a/docs/docs-ref-autogen/excel/excel.groupshapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.groupshapecollection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f778d605727560623b11dad1ba121a3ff394d100
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: d7ca5fdae0c0f2daa4ae3c5df29b5a4d42076784
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109295"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575611"
 items:
 - uid: excel.Excel.GroupShapeCollection
   summary: >-
-    <span data-ttu-id="2cebf-101">代表形状组中的形状集合。</span><span class="sxs-lookup"><span data-stu-id="2cebf-101">Represents a shape collection inside a shape group.</span></span>
+    <span data-ttu-id="a458c-101">代表形状组中的形状集合。</span><span class="sxs-lookup"><span data-stu-id="a458c-101">Represents the shape collection inside a shape group.</span></span>
 
 
-    <span data-ttu-id="2cebf-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cebf-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a458c-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a458c-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.GroupShapeCollection
   fullName: Excel.GroupShapeCollection
@@ -32,7 +32,7 @@ items:
   - excel.Excel.GroupShapeCollection.load_2
   - excel.Excel.GroupShapeCollection.toJSON
 - uid: excel.Excel.GroupShapeCollection.context
-  summary: <span data-ttu-id="2cebf-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="2cebf-103">The request context associated with the object.</span></span> <span data-ttu-id="2cebf-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="2cebf-104">This connects the add-in's process to the Office host application's process.</span></span>
+  summary: <span data-ttu-id="a458c-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a458c-103">The request context associated with the object.</span></span> <span data-ttu-id="a458c-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a458c-104">This connects the add-in's process to the Office host application's process.</span></span>
   isPreview: true
   name: context
   fullName: context
@@ -46,10 +46,10 @@ items:
       - RequestContext
 - uid: excel.Excel.GroupShapeCollection.getCount
   summary: >-
-    <span data-ttu-id="2cebf-105">返回组合形状中的形状的数目。</span><span class="sxs-lookup"><span data-stu-id="2cebf-105">Returns the number of shapes in the group shape.</span></span> <span data-ttu-id="2cebf-106">只读。</span><span class="sxs-lookup"><span data-stu-id="2cebf-106">Read-only.</span></span>
+    <span data-ttu-id="a458c-105">返回形状组中的形状的数目。</span><span class="sxs-lookup"><span data-stu-id="a458c-105">Returns the number of shapes in the shape group.</span></span> <span data-ttu-id="a458c-106">只读。</span><span class="sxs-lookup"><span data-stu-id="a458c-106">Read-only.</span></span>
 
 
-    <span data-ttu-id="2cebf-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cebf-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a458c-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a458c-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: getCount()
   fullName: getCount()
@@ -64,10 +64,10 @@ items:
       description: ''
 - uid: excel.Excel.GroupShapeCollection.getItem
   summary: >-
-    <span data-ttu-id="2cebf-108">使用其名称获取一个形状。</span><span class="sxs-lookup"><span data-stu-id="2cebf-108">Gets a shape using its name.</span></span>
+    <span data-ttu-id="a458c-108">按名称获取形状。</span><span class="sxs-lookup"><span data-stu-id="a458c-108">Gets a shape using its name.</span></span>
 
 
-    <span data-ttu-id="2cebf-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cebf-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a458c-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a458c-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: getItem(name)
   fullName: getItem(name)
@@ -82,15 +82,15 @@ items:
       description: ''
     parameters:
     - id: name
-      description: <span data-ttu-id="2cebf-110">要检索的形状的名称。</span><span class="sxs-lookup"><span data-stu-id="2cebf-110">Name of the shape to be retrieved.</span></span>
+      description: <span data-ttu-id="a458c-110">要检索的形状的名称。</span><span class="sxs-lookup"><span data-stu-id="a458c-110">The name of the shape to be retrieved.</span></span>
       type:
       - string
 - uid: excel.Excel.GroupShapeCollection.getItemAt
   summary: >-
-    <span data-ttu-id="2cebf-111">根据其在集合中的位置获取形状。</span><span class="sxs-lookup"><span data-stu-id="2cebf-111">Gets a shape based on its position in the collection.</span></span>
+    <span data-ttu-id="a458c-111">根据其在集合中的位置获取形状。</span><span class="sxs-lookup"><span data-stu-id="a458c-111">Gets a shape based on its position in the collection.</span></span>
 
 
-    <span data-ttu-id="2cebf-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cebf-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a458c-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a458c-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: getItemAt(index)
   fullName: getItemAt(index)
@@ -105,11 +105,11 @@ items:
       description: ''
     parameters:
     - id: index
-      description: <span data-ttu-id="2cebf-p103">要检索的对象的索引值。从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="2cebf-p103">Index value of the object to be retrieved. Zero-indexed.</span></span>
+      description: <span data-ttu-id="a458c-113">要检索的对象的从零开始的索引值。</span><span class="sxs-lookup"><span data-stu-id="a458c-113">The zero-based index value of the object to be retrieved.</span></span>
       type:
       - number
 - uid: excel.Excel.GroupShapeCollection.items
-  summary: <span data-ttu-id="2cebf-115">获取此集合中的已加载子项目。</span><span class="sxs-lookup"><span data-stu-id="2cebf-115">Gets the loaded child items in this collection.</span></span>
+  summary: <span data-ttu-id="a458c-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="a458c-114">Gets the loaded child items in this collection.</span></span>
   isPreview: true
   name: items
   fullName: items
@@ -122,18 +122,18 @@ items:
       type:
       - Excel.Shape[]
 - uid: excel.Excel.GroupShapeCollection.load
-  summary: <span data-ttu-id="2cebf-116">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2cebf-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2cebf-117">在读取属性之前, 必须先调用 "context, sync ()"。</span><span class="sxs-lookup"><span data-stu-id="2cebf-117">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="a458c-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a458c-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a458c-116">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="a458c-116">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="2cebf-118">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="2cebf-118">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="a458c-117">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="a458c-117">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="2cebf-119">`load(option?: string | string[]): Excel.GroupShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="2cebf-119">`load(option?: string | string[]): Excel.GroupShapeCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+    <span data-ttu-id="a458c-118">`load(option?: string | string[]): Excel.GroupShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a458c-118">`load(option?: string | string[]): Excel.GroupShapeCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
 
 
-    <span data-ttu-id="2cebf-120">`load(option?: { select?: string; expand?: string; }): Excel.GroupShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="2cebf-120">`load(option?: { select?: string; expand?: string; }): Excel.GroupShapeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="a458c-119">`load(option?: { select?: string; expand?: string; }): Excel.GroupShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a458c-119">`load(option?: { select?: string; expand?: string; }): Excel.GroupShapeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="2cebf-121">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GroupShapeCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="2cebf-121">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GroupShapeCollection` - Only available on collection types.</span></span> <span data-ttu-id="2cebf-122">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="2cebf-122">It is similar to the preceding signature.</span></span> <span data-ttu-id="2cebf-123">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="2cebf-123">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="2cebf-124">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="2cebf-124">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="2cebf-125">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="2cebf-125">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="a458c-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GroupShapeCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="a458c-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GroupShapeCollection` - Only available on collection types.</span></span> <span data-ttu-id="a458c-121">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="a458c-121">It is similar to the preceding signature.</span></span> <span data-ttu-id="a458c-122">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="a458c-122">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="a458c-123">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="a458c-123">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="a458c-124">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="a458c-124">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   isPreview: true
   name: load(option)
   fullName: load(option)
@@ -152,7 +152,7 @@ items:
       type:
       - Excel.Interfaces.GroupShapeCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
 - uid: excel.Excel.GroupShapeCollection.load_1
-  summary: <span data-ttu-id="2cebf-126">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2cebf-126">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2cebf-127">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2cebf-127">You must call `context.sync()` before reading the properties.</span></span>
+  summary: <span data-ttu-id="a458c-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a458c-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a458c-126">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a458c-126">You must call `context.sync()` before reading the properties.</span></span>
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -167,7 +167,7 @@ items:
       description: ''
     parameters:
     - id: propertyNames
-      description: <span data-ttu-id="2cebf-128">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="2cebf-128">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="a458c-127">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a458c-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.GroupShapeCollection.load_2
@@ -189,7 +189,7 @@ items:
       type:
       - office.OfficeExtension.LoadOption
 - uid: excel.Excel.GroupShapeCollection.toJSON
-  summary: <span data-ttu-id="2cebf-129">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。</span><span class="sxs-lookup"><span data-stu-id="2cebf-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="2cebf-130">(`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)虽然原始`Excel.GroupShapeCollection`对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.GroupShapeCollectionData` <!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="2cebf-130">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.GroupShapeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.GroupShapeCollectionData`<!-- -->) that contains an "items" array with shallow copies of any loaded properties from the collection's items.</span></span>
+  summary: <span data-ttu-id="a458c-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a458c-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a458c-129">.</span><span class="sxs-lookup"><span data-stu-id="a458c-129"></span></span> <span data-ttu-id="a458c-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a458c-130"></span></span><!-- --><span data-ttu-id="a458c-131">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.GroupShapeCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.GroupShapeCollectionData`</span><span class="sxs-lookup"><span data-stu-id="a458c-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.GroupShapeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.GroupShapeCollectionData`</span></span><!-- --><span data-ttu-id="a458c-132">), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="a458c-132">) that contains an "items" array with shallow copies of any loaded properties from the collection's items.</span></span>
   isPreview: true
   name: toJSON()
   fullName: toJSON()
