--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 43adc4885ac843212c44822317c6b70e1870c3e3
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a9c13c910bff51c385e2bcd7ce8cd61500edfd6c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107832"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575282"
 items:
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions
   summary: >-
-    <span data-ttu-id="251d1-101">表示属于工作簿的注释对象的集合。</span><span class="sxs-lookup"><span data-stu-id="251d1-101">Represents a collection of comment objects that are part of the workbook.</span></span>
+    <span data-ttu-id="e4bc3-101">表示属于工作簿的注释对象的集合。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-101">Represents a collection of comment objects that are part of the workbook.</span></span>
 
 
-    <span data-ttu-id="251d1-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="251d1-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e4bc3-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.CommentCollectionLoadOptions
   fullName: Excel.Interfaces.CommentCollectionLoadOptions
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.$all
+  - excel.Excel.Interfaces.CommentCollectionLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentCollectionLoadOptions.authorName
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.content
+  - excel.Excel.Interfaces.CommentCollectionLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.id
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.$all
@@ -36,12 +39,46 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorEmail
+  summary: >-
+    <span data-ttu-id="e4bc3-103">对于集合中的每个项目: 获取注释的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-103">For EACH ITEM in the collection: Get author email of the comment.</span></span>
+
+
+    <span data-ttu-id="e4bc3-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorName
+  summary: >-
+    <span data-ttu-id="e4bc3-105">对于集合中的每个项目: 获取注释的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-105">For EACH ITEM in the collection: Get author name of the comment.</span></span>
+
+
+    <span data-ttu-id="e4bc3-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.content
   summary: >-
-    <span data-ttu-id="251d1-103">对于集合中的每一项: 获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="251d1-103">For EACH ITEM in the collection: Get/Set the content.</span></span>
+    <span data-ttu-id="e4bc3-107">对于集合中的每一项: 获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-107">For EACH ITEM in the collection: Get or set the content.</span></span>
 
 
-    <span data-ttu-id="251d1-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="251d1-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e4bc3-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
@@ -53,12 +90,29 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.creationDate
+  summary: >-
+    <span data-ttu-id="e4bc3-109">对于集合中的每个项目: 获取注释的创建时间。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-109">For EACH ITEM in the collection: Get creation time of the comment.</span></span> <span data-ttu-id="e4bc3-110">如果注释转换为注释, 则返回 null, 如在此示例中, 注释将不会创建日期。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-110">Will return null if the comment is converted from note, as in this case, the comment will not has created date.</span></span>
+
+
+    <span data-ttu-id="e4bc3-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.id
   summary: >-
-    <span data-ttu-id="251d1-105">对于集合中的每一项: 代表注释标识符。</span><span class="sxs-lookup"><span data-stu-id="251d1-105">For EACH ITEM in the collection: Represents the comment identifier.</span></span> <span data-ttu-id="251d1-106">只读。</span><span class="sxs-lookup"><span data-stu-id="251d1-106">Read-only.</span></span>
+    <span data-ttu-id="e4bc3-112">对于集合中的每一项: 代表注释标识符。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-112">For EACH ITEM in the collection: Represents the comment identifier.</span></span> <span data-ttu-id="e4bc3-113">只读。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-113">Read-only.</span></span>
 
 
-    <span data-ttu-id="251d1-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="251d1-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e4bc3-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -72,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.isParent
   summary: >-
-    <span data-ttu-id="251d1-108">对于集合中的每一项: 表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="251d1-108">For EACH ITEM in the collection: Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="251d1-109">在此处始终返回 true。</span><span class="sxs-lookup"><span data-stu-id="251d1-109">Always return true here.</span></span> <span data-ttu-id="251d1-110">只读。</span><span class="sxs-lookup"><span data-stu-id="251d1-110">Read-only.</span></span>
+    <span data-ttu-id="e4bc3-115">对于集合中的每一项: 表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-115">For EACH ITEM in the collection: Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="e4bc3-116">在此处始终返回 True。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-116">Always return true here.</span></span> <span data-ttu-id="e4bc3-117">只读。</span><span class="sxs-lookup"><span data-stu-id="e4bc3-117">Read-only.</span></span>
 
 
-    <span data-ttu-id="251d1-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="251d1-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e4bc3-118">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bc3-118">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isParent
   fullName: isParent
