--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a6cd21131f41f5a920d9af6481130b29df8c2ea2
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: e95a4a9c7e907b03cf5288ee2c278de73773e66c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112137"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575534"
 items:
 - uid: excel.Excel.Interfaces.CommentData
-  summary: <span data-ttu-id="f01d1-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f01d1-101">An interface describing the data returned by calling "comment.toJSON()".</span></span>
+  summary: <span data-ttu-id="19924-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="19924-101">An interface describing the data returned by calling "comment.toJSON()".</span></span>
   name: Excel.Interfaces.CommentData
   fullName: Excel.Interfaces.CommentData
   langs:
@@ -15,16 +15,53 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.CommentData.authorEmail
+  - excel.Excel.Interfaces.CommentData.authorName
   - excel.Excel.Interfaces.CommentData.content
+  - excel.Excel.Interfaces.CommentData.creationDate
   - excel.Excel.Interfaces.CommentData.id
   - excel.Excel.Interfaces.CommentData.isParent
   - excel.Excel.Interfaces.CommentData.replies
+- uid: excel.Excel.Interfaces.CommentData.authorEmail
+  summary: >-
+    <span data-ttu-id="19924-102">获取评论的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="19924-102">Get author email of the comment.</span></span>
+
+
+    <span data-ttu-id="19924-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: string;'
+    return:
+      type:
+      - string
+- uid: excel.Excel.Interfaces.CommentData.authorName
+  summary: >-
+    <span data-ttu-id="19924-104">获取批注的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="19924-104">Get author name of the comment.</span></span>
+
+
+    <span data-ttu-id="19924-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: string;'
+    return:
+      type:
+      - string
 - uid: excel.Excel.Interfaces.CommentData.content
   summary: >-
-    <span data-ttu-id="f01d1-102">获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="f01d1-102">Get/Set the content.</span></span>
+    <span data-ttu-id="19924-106">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="19924-106">Get or set the content.</span></span>
 
 
-    <span data-ttu-id="f01d1-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f01d1-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19924-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
@@ -36,12 +73,29 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.CommentData.creationDate
+  summary: >-
+    <span data-ttu-id="19924-108">获取注释的创建时间。</span><span class="sxs-lookup"><span data-stu-id="19924-108">Get creation time of the comment.</span></span> <span data-ttu-id="19924-109">如果注释转换为注释, 则返回 null, 如在此示例中, 注释将不会创建日期。</span><span class="sxs-lookup"><span data-stu-id="19924-109">Will return null if the comment is converted from note, as in this case, the comment will not has created date.</span></span>
+
+
+    <span data-ttu-id="19924-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: Date;'
+    return:
+      type:
+      - Date
 - uid: excel.Excel.Interfaces.CommentData.id
   summary: >-
-    <span data-ttu-id="f01d1-104">表示注释标识符。</span><span class="sxs-lookup"><span data-stu-id="f01d1-104">Represents the comment identifier.</span></span> <span data-ttu-id="f01d1-105">只读。</span><span class="sxs-lookup"><span data-stu-id="f01d1-105">Read-only.</span></span>
+    <span data-ttu-id="19924-111">表示批注标识符。</span><span class="sxs-lookup"><span data-stu-id="19924-111">Represents the comment identifier.</span></span> <span data-ttu-id="19924-112">只读。</span><span class="sxs-lookup"><span data-stu-id="19924-112">Read-only.</span></span>
 
 
-    <span data-ttu-id="f01d1-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f01d1-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19924-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -55,10 +109,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.CommentData.isParent
   summary: >-
-    <span data-ttu-id="f01d1-107">表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="f01d1-107">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="f01d1-108">在此处始终返回 true。</span><span class="sxs-lookup"><span data-stu-id="f01d1-108">Always return true here.</span></span> <span data-ttu-id="f01d1-109">只读。</span><span class="sxs-lookup"><span data-stu-id="f01d1-109">Read-only.</span></span>
+    <span data-ttu-id="19924-114">表示它是批注线程还是回复。</span><span class="sxs-lookup"><span data-stu-id="19924-114">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="19924-115">在此处始终返回 True。</span><span class="sxs-lookup"><span data-stu-id="19924-115">Always return true here.</span></span> <span data-ttu-id="19924-116">只读。</span><span class="sxs-lookup"><span data-stu-id="19924-116">Read-only.</span></span>
 
 
-    <span data-ttu-id="f01d1-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f01d1-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19924-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isParent
   fullName: isParent
@@ -72,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentData.replies
   summary: >-
-    <span data-ttu-id="f01d1-111">代表与注释关联的答复对象的集合。</span><span class="sxs-lookup"><span data-stu-id="f01d1-111">Represents a collection of reply objects associated with the comment.</span></span> <span data-ttu-id="f01d1-112">只读。</span><span class="sxs-lookup"><span data-stu-id="f01d1-112">Read-only.</span></span>
+    <span data-ttu-id="19924-118">表示与批注关联的回复对象的集合。</span><span class="sxs-lookup"><span data-stu-id="19924-118">Represents a collection of reply objects associated with the comment.</span></span> <span data-ttu-id="19924-119">只读。</span><span class="sxs-lookup"><span data-stu-id="19924-119">Read-only.</span></span>
 
 
-    <span data-ttu-id="f01d1-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f01d1-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19924-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19924-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: replies
   fullName: replies
