--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 01b70bb88d8dfb2e6c658cf64bac627d31666157
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 8668c4cf3e1e0bdc81bf18cac7053097725c9410
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117254"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575730"
 items:
 - uid: excel.Excel.Interfaces.CommentLoadOptions
   summary: >-
-    <span data-ttu-id="3644a-101">表示工作簿中的单元格注释对象。</span><span class="sxs-lookup"><span data-stu-id="3644a-101">Represents a cell comment object in the workbook.</span></span>
+    <span data-ttu-id="02c82-101">表示工作簿中的单元格注释对象。</span><span class="sxs-lookup"><span data-stu-id="02c82-101">Represents a cell comment object in the workbook.</span></span>
 
 
-    <span data-ttu-id="3644a-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3644a-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="02c82-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.CommentLoadOptions
   fullName: Excel.Interfaces.CommentLoadOptions
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentLoadOptions.$all
+  - excel.Excel.Interfaces.CommentLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentLoadOptions.authorName
   - excel.Excel.Interfaces.CommentLoadOptions.content
+  - excel.Excel.Interfaces.CommentLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentLoadOptions.id
   - excel.Excel.Interfaces.CommentLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentLoadOptions.$all
@@ -36,12 +39,46 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentLoadOptions.authorEmail
+  summary: >-
+    <span data-ttu-id="02c82-103">获取评论的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="02c82-103">Get author email of the comment.</span></span>
+
+
+    <span data-ttu-id="02c82-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentLoadOptions.authorName
+  summary: >-
+    <span data-ttu-id="02c82-105">获取批注的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="02c82-105">Get author name of the comment.</span></span>
+
+
+    <span data-ttu-id="02c82-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentLoadOptions.content
   summary: >-
-    <span data-ttu-id="3644a-103">获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="3644a-103">Get/Set the content.</span></span>
+    <span data-ttu-id="02c82-107">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="02c82-107">Get or set the content.</span></span>
 
 
-    <span data-ttu-id="3644a-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3644a-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="02c82-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
@@ -53,12 +90,29 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentLoadOptions.creationDate
+  summary: >-
+    <span data-ttu-id="02c82-109">获取注释的创建时间。</span><span class="sxs-lookup"><span data-stu-id="02c82-109">Get creation time of the comment.</span></span> <span data-ttu-id="02c82-110">如果注释转换为注释, 则返回 null, 如在此示例中, 注释将不会创建日期。</span><span class="sxs-lookup"><span data-stu-id="02c82-110">Will return null if the comment is converted from note, as in this case, the comment will not has created date.</span></span>
+
+
+    <span data-ttu-id="02c82-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentLoadOptions.id
   summary: >-
-    <span data-ttu-id="3644a-105">表示注释标识符。</span><span class="sxs-lookup"><span data-stu-id="3644a-105">Represents the comment identifier.</span></span> <span data-ttu-id="3644a-106">只读。</span><span class="sxs-lookup"><span data-stu-id="3644a-106">Read-only.</span></span>
+    <span data-ttu-id="02c82-112">表示批注标识符。</span><span class="sxs-lookup"><span data-stu-id="02c82-112">Represents the comment identifier.</span></span> <span data-ttu-id="02c82-113">只读。</span><span class="sxs-lookup"><span data-stu-id="02c82-113">Read-only.</span></span>
 
 
-    <span data-ttu-id="3644a-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3644a-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="02c82-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -72,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentLoadOptions.isParent
   summary: >-
-    <span data-ttu-id="3644a-108">表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="3644a-108">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="3644a-109">在此处始终返回 true。</span><span class="sxs-lookup"><span data-stu-id="3644a-109">Always return true here.</span></span> <span data-ttu-id="3644a-110">只读。</span><span class="sxs-lookup"><span data-stu-id="3644a-110">Read-only.</span></span>
+    <span data-ttu-id="02c82-115">表示它是批注线程还是回复。</span><span class="sxs-lookup"><span data-stu-id="02c82-115">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="02c82-116">在此处始终返回 True。</span><span class="sxs-lookup"><span data-stu-id="02c82-116">Always return true here.</span></span> <span data-ttu-id="02c82-117">只读。</span><span class="sxs-lookup"><span data-stu-id="02c82-117">Read-only.</span></span>
 
 
-    <span data-ttu-id="3644a-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3644a-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="02c82-118">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="02c82-118">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isParent
   fullName: isParent
