--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplycollectionloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 85892c4856fe598e5333b840504c67487606abd5
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: b87eb7034dc3de195a47118ffa48dc4d7b1ebe55
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109960"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575464"
 items:
 - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions
   summary: >-
-    <span data-ttu-id="51b8c-101">代表作为注释一部分的注释答复对象的集合。</span><span class="sxs-lookup"><span data-stu-id="51b8c-101">Represents a collection of comment reply objects that are part of the comment.</span></span>
+    <span data-ttu-id="9adf8-101">代表作为注释一部分的注释答复对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9adf8-101">Represents a collection of comment reply objects that are part of the comment.</span></span>
 
 
-    <span data-ttu-id="51b8c-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51b8c-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9adf8-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.CommentReplyCollectionLoadOptions
   fullName: Excel.Interfaces.CommentReplyCollectionLoadOptions
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.$all
+  - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.authorName
   - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.content
+  - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.id
   - excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.$all
@@ -36,12 +39,46 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.authorEmail
+  summary: >-
+    <span data-ttu-id="9adf8-103">对于集合中的每一项: 获取批注答复的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="9adf8-103">For EACH ITEM in the collection: Get author email of the comment reply.</span></span>
+
+
+    <span data-ttu-id="9adf8-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.authorName
+  summary: >-
+    <span data-ttu-id="9adf8-105">对于集合中的每一项: 获取批注答复的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="9adf8-105">For EACH ITEM in the collection: Get author name of the comment reply.</span></span>
+
+
+    <span data-ttu-id="9adf8-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.content
   summary: >-
-    <span data-ttu-id="51b8c-103">对于集合中的每一项: 获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="51b8c-103">For EACH ITEM in the collection: Get/Set the content.</span></span>
+    <span data-ttu-id="9adf8-107">对于集合中的每一项: 获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="9adf8-107">For EACH ITEM in the collection: Get or set the content.</span></span>
 
 
-    <span data-ttu-id="51b8c-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51b8c-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9adf8-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
@@ -53,12 +90,29 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.creationDate
+  summary: >-
+    <span data-ttu-id="9adf8-109">对于集合中的每一项: 获取批注答复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="9adf8-109">For EACH ITEM in the collection: Get creation time of the comment reply.</span></span>
+
+
+    <span data-ttu-id="9adf8-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.id
   summary: >-
-    <span data-ttu-id="51b8c-105">对于集合中的每一项: 表示批注答复标识符。</span><span class="sxs-lookup"><span data-stu-id="51b8c-105">For EACH ITEM in the collection: Represents the comment reply identifier.</span></span> <span data-ttu-id="51b8c-106">只读。</span><span class="sxs-lookup"><span data-stu-id="51b8c-106">Read-only.</span></span>
+    <span data-ttu-id="9adf8-111">对于集合中的每一项: 表示批注答复标识符。</span><span class="sxs-lookup"><span data-stu-id="9adf8-111">For EACH ITEM in the collection: Represents the comment reply identifier.</span></span> <span data-ttu-id="9adf8-112">只读。</span><span class="sxs-lookup"><span data-stu-id="9adf8-112">Read-only.</span></span>
 
 
-    <span data-ttu-id="51b8c-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51b8c-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9adf8-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -72,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.isParent
   summary: >-
-    <span data-ttu-id="51b8c-108">对于集合中的每一项: 表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="51b8c-108">For EACH ITEM in the collection: Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="51b8c-109">在此处始终返回 false。</span><span class="sxs-lookup"><span data-stu-id="51b8c-109">Always return false here.</span></span> <span data-ttu-id="51b8c-110">只读。</span><span class="sxs-lookup"><span data-stu-id="51b8c-110">Read-only.</span></span>
+    <span data-ttu-id="9adf8-114">对于集合中的每一项: 表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="9adf8-114">For EACH ITEM in the collection: Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="9adf8-115">在此处始终返回 False。</span><span class="sxs-lookup"><span data-stu-id="9adf8-115">Always return false here.</span></span> <span data-ttu-id="9adf8-116">只读。</span><span class="sxs-lookup"><span data-stu-id="9adf8-116">Read-only.</span></span>
 
 
-    <span data-ttu-id="51b8c-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51b8c-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9adf8-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9adf8-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isParent
   fullName: isParent
