--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 87fc4e58123dc4ec923d72ced61527fa06d9c393
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 9ea5c8e2697c0a5bd0735cff9731cb913fe537f9
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117464"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575450"
 items:
 - uid: excel.Excel.Interfaces.CommentReplyData
-  summary: <span data-ttu-id="394e3-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="394e3-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
+  summary: <span data-ttu-id="94696-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="94696-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
   name: Excel.Interfaces.CommentReplyData
   fullName: Excel.Interfaces.CommentReplyData
   langs:
@@ -15,15 +15,52 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.CommentReplyData.authorEmail
+  - excel.Excel.Interfaces.CommentReplyData.authorName
   - excel.Excel.Interfaces.CommentReplyData.content
+  - excel.Excel.Interfaces.CommentReplyData.creationDate
   - excel.Excel.Interfaces.CommentReplyData.id
   - excel.Excel.Interfaces.CommentReplyData.isParent
+- uid: excel.Excel.Interfaces.CommentReplyData.authorEmail
+  summary: >-
+    <span data-ttu-id="94696-102">获取批注答复的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="94696-102">Get author email of the comment reply.</span></span>
+
+
+    <span data-ttu-id="94696-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94696-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: string;'
+    return:
+      type:
+      - string
+- uid: excel.Excel.Interfaces.CommentReplyData.authorName
+  summary: >-
+    <span data-ttu-id="94696-104">获取批注答复的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="94696-104">Get author name of the comment reply.</span></span>
+
+
+    <span data-ttu-id="94696-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94696-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: string;'
+    return:
+      type:
+      - string
 - uid: excel.Excel.Interfaces.CommentReplyData.content
   summary: >-
-    <span data-ttu-id="394e3-102">获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="394e3-102">Get/Set the content.</span></span>
+    <span data-ttu-id="94696-106">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="94696-106">Get or set the content.</span></span>
 
 
-    <span data-ttu-id="394e3-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="394e3-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="94696-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94696-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
@@ -35,12 +72,29 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.CommentReplyData.creationDate
+  summary: >-
+    <span data-ttu-id="94696-108">获取批注答复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="94696-108">Get creation time of the comment reply.</span></span>
+
+
+    <span data-ttu-id="94696-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94696-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: Date;'
+    return:
+      type:
+      - Date
 - uid: excel.Excel.Interfaces.CommentReplyData.id
   summary: >-
-    <span data-ttu-id="394e3-104">表示批注答复标识符。</span><span class="sxs-lookup"><span data-stu-id="394e3-104">Represents the comment reply identifier.</span></span> <span data-ttu-id="394e3-105">只读。</span><span class="sxs-lookup"><span data-stu-id="394e3-105">Read-only.</span></span>
+    <span data-ttu-id="94696-110">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="94696-110">Represents the comment reply identifier.</span></span> <span data-ttu-id="94696-111">只读。</span><span class="sxs-lookup"><span data-stu-id="94696-111">Read-only.</span></span>
 
 
-    <span data-ttu-id="394e3-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="394e3-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="94696-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94696-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -54,10 +108,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.CommentReplyData.isParent
   summary: >-
-    <span data-ttu-id="394e3-107">表示它是注释线程还是答复。</span><span class="sxs-lookup"><span data-stu-id="394e3-107">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="394e3-108">在此处始终返回 false。</span><span class="sxs-lookup"><span data-stu-id="394e3-108">Always return false here.</span></span> <span data-ttu-id="394e3-109">只读。</span><span class="sxs-lookup"><span data-stu-id="394e3-109">Read-only.</span></span>
+    <span data-ttu-id="94696-113">表示它是批注线程还是回复。</span><span class="sxs-lookup"><span data-stu-id="94696-113">Represents whether it is a comment thread or reply.</span></span> <span data-ttu-id="94696-114">在此处始终返回 False。</span><span class="sxs-lookup"><span data-stu-id="94696-114">Always return false here.</span></span> <span data-ttu-id="94696-115">只读。</span><span class="sxs-lookup"><span data-stu-id="94696-115">Read-only.</span></span>
 
 
-    <span data-ttu-id="394e3-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="394e3-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="94696-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94696-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isParent
   fullName: isParent
