--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5acb307cf471fe9abaa8e7679f0bf02229aabfbe
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 73c873b3d49d90d4c7619d169f9d596d5a66cbd8
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109092"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575926"
 items:
 - uid: excel.Excel.Interfaces.CommentReplyUpdateData
-  summary: <span data-ttu-id="b8136-101">用于更新 CommentReply 对象上的数据的接口, 用于在 "CommentReply" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="b8136-101">An interface for updating data on the CommentReply object, for use in "commentReply.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="31d9b-101">一个用于更新 CommentReply 对象上的数据的接口, 可用于 "CommentReply (</span><span class="sxs-lookup"><span data-stu-id="31d9b-101">An interface for updating data on the CommentReply object, for use in "commentReply.set(</span></span><!-- --><span data-ttu-id="31d9b-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="31d9b-102"></span></span><!-- --><span data-ttu-id="31d9b-103">)".</span><span class="sxs-lookup"><span data-stu-id="31d9b-103"></span></span>
   name: Excel.Interfaces.CommentReplyUpdateData
   fullName: Excel.Interfaces.CommentReplyUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.CommentReplyUpdateData.content
 - uid: excel.Excel.Interfaces.CommentReplyUpdateData.content
   summary: >-
-    <span data-ttu-id="b8136-102">获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="b8136-102">Get/Set the content.</span></span>
+    <span data-ttu-id="31d9b-104">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="31d9b-104">Get or set the content.</span></span>
 
 
-    <span data-ttu-id="b8136-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8136-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="31d9b-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="31d9b-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
