--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 343b8ac7dcdc46257ee4c72ab5dbf8b0d656b5c0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 395dea22c931d73ae137d98db5ee3df4a00f7a54
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109582"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575366"
 items:
 - uid: excel.Excel.Interfaces.CommentUpdateData
-  summary: <span data-ttu-id="e2c16-101">一个用于更新 comment 对象上的数据的接口, 可用于 "comment. set (<!-- -->{...}"<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="e2c16-101">An interface for updating data on the Comment object, for use in "comment.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="34ddd-101">一个用于更新 comment 对象上的数据的接口, 可用于 "comment. set (</span><span class="sxs-lookup"><span data-stu-id="34ddd-101">An interface for updating data on the Comment object, for use in "comment.set(</span></span><!-- --><span data-ttu-id="34ddd-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="34ddd-102"></span></span><!-- --><span data-ttu-id="34ddd-103">)".</span><span class="sxs-lookup"><span data-stu-id="34ddd-103"></span></span>
   name: Excel.Interfaces.CommentUpdateData
   fullName: Excel.Interfaces.CommentUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.CommentUpdateData.content
 - uid: excel.Excel.Interfaces.CommentUpdateData.content
   summary: >-
-    <span data-ttu-id="e2c16-102">获取/设置内容。</span><span class="sxs-lookup"><span data-stu-id="e2c16-102">Get/Set the content.</span></span>
+    <span data-ttu-id="34ddd-104">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="34ddd-104">Get or set the content.</span></span>
 
 
-    <span data-ttu-id="e2c16-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2c16-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="34ddd-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="34ddd-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: content
   fullName: content
