--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefontloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 15e856f8aa52ea3f9d996c3279b1944b5ef568e0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ffef2f7a7bb5f51b7cbd7406c30362a16a8b0241
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30110814"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575492"
 items:
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions
   summary: >-
-    <span data-ttu-id="d9ef2-101">此对象表示形状中的 TextRange 的字体属性 (字体名称、字体大小、颜色等)。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-101">This object represents the font attributes (font name, font size, color, etc.) for a TextRange in the Shape.</span></span>
+    <span data-ttu-id="bc07f-101">代表形状的 TextRange 对象的字体属性, 如字体名称、字体大小和颜色。</span><span class="sxs-lookup"><span data-stu-id="bc07f-101">Represents the font attributes, such as font name, font size, and color, for a shape's TextRange object.</span></span>
 
 
-    <span data-ttu-id="d9ef2-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.ShapeFontLoadOptions
   fullName: Excel.Interfaces.ShapeFontLoadOptions
@@ -41,10 +41,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.bold
   summary: >-
-    <span data-ttu-id="d9ef2-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-103">Represents the bold status of font.</span></span> <span data-ttu-id="d9ef2-104">返回 null TextRange 同时包含粗体和非粗体文本片段。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-104">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
+    <span data-ttu-id="bc07f-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="bc07f-103">Represents the bold status of font.</span></span> <span data-ttu-id="bc07f-104">如果 TextRange 包含粗体和非粗体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="bc07f-104">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
 
 
-    <span data-ttu-id="d9ef2-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: bold
   fullName: bold
@@ -58,10 +58,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.color
   summary: >-
-    <span data-ttu-id="d9ef2-106">文本颜色的 HTML 颜色代码表示形式。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-106">HTML color code representation of the text color.</span></span> <span data-ttu-id="d9ef2-107">例如，</span><span class="sxs-lookup"><span data-stu-id="d9ef2-107">E.g.</span></span> <span data-ttu-id="d9ef2-108">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-108">\#FF0000 represents Red.</span></span> <span data-ttu-id="d9ef2-109">如果 TextRange 包含具有不同颜色的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-109">Returns null if the TextRange includes text fragments with different colors.</span></span>
+    <span data-ttu-id="bc07f-106">文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。</span><span class="sxs-lookup"><span data-stu-id="bc07f-106">The HTML color code representation of the text color (e.g. "\#FF0000" represents red).</span></span> <span data-ttu-id="bc07f-107">如果 TextRange 包含具有不同颜色的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="bc07f-107">Returns null if the TextRange includes text fragments with different colors.</span></span>
 
 
-    <span data-ttu-id="d9ef2-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: color
   fullName: color
@@ -75,10 +75,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.italic
   summary: >-
-    <span data-ttu-id="d9ef2-111">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-111">Represents the italic status of font.</span></span> <span data-ttu-id="d9ef2-112">如果 TextRange 同时包含斜体和非斜体文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-112">Return null if the TextRange includes both italic and non-italic text fragments.</span></span>
+    <span data-ttu-id="bc07f-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="bc07f-109">Represents the italic status of font.</span></span> <span data-ttu-id="bc07f-110">如果 TextRange 同时包含斜体和非斜体文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="bc07f-110">Returns null if the TextRange includes both italic and non-italic text fragments.</span></span>
 
 
-    <span data-ttu-id="d9ef2-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: italic
   fullName: italic
@@ -92,10 +92,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.name
   summary: >-
-    <span data-ttu-id="d9ef2-114">表示字体名称 (例如, "Calibri")。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-114">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="d9ef2-115">如果文本为复杂文种或东亚语言, 则表示相应的字体名称;否则表示西文字体名称。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-115">If the text is Complex Script or East Asian language, represents corresponding font name; otherwise represents Latin font name.</span></span>
+    <span data-ttu-id="bc07f-112">表示字体名称（例如“Calibri”）。</span><span class="sxs-lookup"><span data-stu-id="bc07f-112">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="bc07f-113">如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。</span><span class="sxs-lookup"><span data-stu-id="bc07f-113">If the text is Complex Script or East Asian language, this is the corresponding font name; otherwise it is the Latin font name.</span></span>
 
 
-    <span data-ttu-id="d9ef2-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: name
   fullName: name
@@ -109,10 +109,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.size
   summary: >-
-    <span data-ttu-id="d9ef2-117">表示字体大小, 以磅为单位 (例如 11)。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-117">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="d9ef2-118">如果 TextRange 包含不同字体大小的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-118">Return null if the TextRange includes text fragments with different font sizes.</span></span>
+    <span data-ttu-id="bc07f-115">表示以磅为单位的字体大小（例如 11）。</span><span class="sxs-lookup"><span data-stu-id="bc07f-115">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="bc07f-116">如果 TextRange 包含不同字体大小的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="bc07f-116">Returns null if the TextRange includes text fragments with different font sizes.</span></span>
 
 
-    <span data-ttu-id="d9ef2-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: size
   fullName: size
@@ -126,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.underline
   summary: >-
-    <span data-ttu-id="d9ef2-120">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-120">Type of underline applied to the font.</span></span> <span data-ttu-id="d9ef2-121">如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-121">Return null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="d9ef2-122">有关详细信息, 请参阅 ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="d9ef2-122">See Excel.ShapeFontUnderlineStyle for details.</span></span>
+    <span data-ttu-id="bc07f-118">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="bc07f-118">Type of underline applied to the font.</span></span> <span data-ttu-id="bc07f-119">如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="bc07f-119">Returns null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="bc07f-120">有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="bc07f-120">See Excel.ShapeFontUnderlineStyle for details.</span></span>
 
 
-    <span data-ttu-id="d9ef2-123">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9ef2-123">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="bc07f-121">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc07f-121">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: underline
   fullName: underline
