--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4d9512e837933430b70b9d978639158e34d24c1b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 400593452c9477a785b691df4aa318f77b46038f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113124"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575583"
 items:
 - uid: excel.Excel.Interfaces.ShapeGroupData
-  summary: <span data-ttu-id="7eb6a-101">描述通过调用 "shapeGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="7eb6a-101">An interface describing the data returned by calling "shapeGroup.toJSON()".</span></span>
+  summary: <span data-ttu-id="9839d-101">描述通过调用 "shapeGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9839d-101">An interface describing the data returned by calling "shapeGroup.toJSON()".</span></span>
   name: Excel.Interfaces.ShapeGroupData
   fullName: Excel.Interfaces.ShapeGroupData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.ShapeGroupData.shapes
 - uid: excel.Excel.Interfaces.ShapeGroupData.id
   summary: >-
-    <span data-ttu-id="7eb6a-102">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="7eb6a-102">Represents the shape identifier.</span></span> <span data-ttu-id="7eb6a-103">只读。</span><span class="sxs-lookup"><span data-stu-id="7eb6a-103">Read-only.</span></span>
+    <span data-ttu-id="9839d-102">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="9839d-102">Represents the shape identifier.</span></span> <span data-ttu-id="9839d-103">只读。</span><span class="sxs-lookup"><span data-stu-id="9839d-103">Read-only.</span></span>
 
 
-    <span data-ttu-id="7eb6a-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7eb6a-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9839d-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9839d-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -36,10 +36,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeGroupData.shapes
   summary: >-
-    <span data-ttu-id="7eb6a-105">返回组中的形状集合。</span><span class="sxs-lookup"><span data-stu-id="7eb6a-105">Returns the shape collection in the group.</span></span> <span data-ttu-id="7eb6a-106">只读。</span><span class="sxs-lookup"><span data-stu-id="7eb6a-106">Read-only.</span></span>
+    <span data-ttu-id="9839d-105">返回 Shape 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9839d-105">Returns the collection of Shape objects.</span></span> <span data-ttu-id="9839d-106">只读。</span><span class="sxs-lookup"><span data-stu-id="9839d-106">Read-only.</span></span>
 
 
-    <span data-ttu-id="7eb6a-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7eb6a-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9839d-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9839d-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shapes
   fullName: shapes
