--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapegrouploadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapegrouploadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 166833680a111826290170bbac0b7d21415caab8
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ee4357c3f0f36132ac8607d7c65607024386e5e0
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117714"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575416"
 items:
 - uid: excel.Excel.Interfaces.ShapeGroupLoadOptions
   summary: >-
-    <span data-ttu-id="3de92-101">代表工作表中的形状组对象。</span><span class="sxs-lookup"><span data-stu-id="3de92-101">Represents a shape group object inside a worksheet.</span></span>
+    <span data-ttu-id="d3512-101">代表工作表中的形状组。</span><span class="sxs-lookup"><span data-stu-id="d3512-101">Represents a shape group inside a worksheet.</span></span> <span data-ttu-id="d3512-102">若要获取相应的 Shape 对象, 请使用`ShapeGroup.shape`</span><span class="sxs-lookup"><span data-stu-id="d3512-102">To get the corresponding Shape object, use `ShapeGroup.shape`</span></span><!-- --><span data-ttu-id="d3512-103">.</span><span class="sxs-lookup"><span data-stu-id="d3512-103"></span></span>
 
 
-    <span data-ttu-id="3de92-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3de92-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d3512-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3512-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.ShapeGroupLoadOptions
   fullName: Excel.Interfaces.ShapeGroupLoadOptions
@@ -37,10 +37,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeGroupLoadOptions.id
   summary: >-
-    <span data-ttu-id="3de92-103">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="3de92-103">Represents the shape identifier.</span></span> <span data-ttu-id="3de92-104">只读。</span><span class="sxs-lookup"><span data-stu-id="3de92-104">Read-only.</span></span>
+    <span data-ttu-id="d3512-105">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="d3512-105">Represents the shape identifier.</span></span> <span data-ttu-id="d3512-106">只读。</span><span class="sxs-lookup"><span data-stu-id="d3512-106">Read-only.</span></span>
 
 
-    <span data-ttu-id="3de92-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3de92-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d3512-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3512-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -54,10 +54,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeGroupLoadOptions.shape
   summary: >-
-    <span data-ttu-id="3de92-106">返回组的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="3de92-106">Returns the shape object for the group.</span></span>
+    <span data-ttu-id="d3512-108">返回与组相关联的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="d3512-108">Returns the Shape object associated with the group.</span></span>
 
 
-    <span data-ttu-id="3de92-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3de92-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d3512-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3512-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shape
   fullName: shape
