--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2f1f68c27900b8ef2326ba617152440f39483a86
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: b35fc2be4c3bc3e11b226191d3fc0113285c8946
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108231"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575721"
 items:
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions
   summary: >-
-    <span data-ttu-id="7fead-101">代表 shape 对象的线条格式。</span><span class="sxs-lookup"><span data-stu-id="7fead-101">Represents the line formatting for the shape object.</span></span> <span data-ttu-id="7fead-102">对于 "图片" 和 "几何" 形状, 线条格式代表 shape 对象的边框。</span><span class="sxs-lookup"><span data-stu-id="7fead-102">For picture and geometric shape, line formatting represents the border of shape object.</span></span>
+    <span data-ttu-id="e3392-101">代表 shape 对象的线条格式。</span><span class="sxs-lookup"><span data-stu-id="e3392-101">Represents the line formatting for the shape object.</span></span> <span data-ttu-id="e3392-102">对于图像和几何形状, 线条格式表示形状的边框。</span><span class="sxs-lookup"><span data-stu-id="e3392-102">For images and geometric shapes, line formatting represents the border of the shape.</span></span>
 
 
-    <span data-ttu-id="7fead-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.ShapeLineFormatLoadOptions
   fullName: Excel.Interfaces.ShapeLineFormatLoadOptions
@@ -41,10 +41,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.color
   summary: >-
-    <span data-ttu-id="7fead-104">代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="7fead-104">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+    <span data-ttu-id="e3392-104">代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="e3392-104">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
 
-    <span data-ttu-id="7fead-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: color
   fullName: color
@@ -58,10 +58,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.dashStyle
   summary: >-
-    <span data-ttu-id="7fead-106">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="7fead-106">Represents the line style of the shape.</span></span> <span data-ttu-id="7fead-107">当行不可见或具有混合的短划线样式属性 (例如, 形状的组合类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7fead-107">Returns null when line is not visible or has mixed line dash style property (e.g. group type of shape).</span></span> <span data-ttu-id="7fead-108">有关详细信息, 请参阅 ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="7fead-108">See Excel.ShapeLineStyle for details.</span></span>
+    <span data-ttu-id="e3392-106">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="e3392-106">Represents the line style of the shape.</span></span> <span data-ttu-id="e3392-107">如果行不可见或不一致的虚线样式, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="e3392-107">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="e3392-108">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="e3392-108">See Excel.ShapeLineStyle for details.</span></span>
 
 
-    <span data-ttu-id="7fead-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: dashStyle
   fullName: dashStyle
@@ -75,10 +75,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.style
   summary: >-
-    <span data-ttu-id="7fead-110">表示形状对象的线条样式。</span><span class="sxs-lookup"><span data-stu-id="7fead-110">Represents the line style of the shape object.</span></span> <span data-ttu-id="7fead-111">当行不可见或具有混合的行可见属性 (例如, 形状的组合类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7fead-111">Returns null when line is not visible or has mixed line visible property (e.g. group type of shape).</span></span> <span data-ttu-id="7fead-112">有关详细信息, 请参阅 ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="7fead-112">See Excel.ShapeLineStyle for details.</span></span>
+    <span data-ttu-id="e3392-110">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="e3392-110">Represents the line style of the shape.</span></span> <span data-ttu-id="e3392-111">如果行不可见或样式不一致, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="e3392-111">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="e3392-112">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="e3392-112">See Excel.ShapeLineStyle for details.</span></span>
 
 
-    <span data-ttu-id="7fead-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: style
   fullName: style
@@ -92,10 +92,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.transparency
   summary: >-
-    <span data-ttu-id="7fead-114">表示指定线条的透明度为 0.0 (不透明) 到 1.0 (清除) 的值的度数。</span><span class="sxs-lookup"><span data-stu-id="7fead-114">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="7fead-115">如果形状具有混和的线条透明度属性 (例如, shape 的 group 类型)), 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="7fead-115">Returns null when the shape has mixed line transparency property (e.g. group type of shape).</span></span>
+    <span data-ttu-id="e3392-114">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="e3392-114">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="e3392-115">如果形状具有不一致的透明胶片, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="e3392-115">Returns null when the shape has inconsistent transparencies.</span></span>
 
 
-    <span data-ttu-id="7fead-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: transparency
   fullName: transparency
@@ -109,10 +109,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.visible
   summary: >-
-    <span data-ttu-id="7fead-117">表示是否显示 shape 元素的线条格式。</span><span class="sxs-lookup"><span data-stu-id="7fead-117">Represents whether the line formatting of a shape element is visible.</span></span> <span data-ttu-id="7fead-118">当形状具有混合的线条可见属性 (例如, shape 的 group 类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7fead-118">Returns null when the shape has mixed line visible property (e.g. group type of shape).</span></span>
+    <span data-ttu-id="e3392-117">表示 shape 元素的行格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="e3392-117">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="e3392-118">如果形状具有不一致的 visibilities, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="e3392-118">Returns null when the shape has inconsistent visibilities.</span></span>
 
 
-    <span data-ttu-id="7fead-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: visible
   fullName: visible
@@ -126,10 +126,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.weight
   summary: >-
-    <span data-ttu-id="7fead-120">表示线条的重量, 以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="7fead-120">Represents weight of the line, in points.</span></span> <span data-ttu-id="7fead-121">当行不可见或具有混合的线条粗细属性 (例如, 形状的组合类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7fead-121">Returns null when the line is not visible or has mixed line weight property (e.g. group type of shape).</span></span>
+    <span data-ttu-id="e3392-120">表示线条的粗细, 以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="e3392-120">Represents the weight of the line, in points.</span></span> <span data-ttu-id="e3392-121">如果行不可见或线条粗细不一致, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="e3392-121">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
 
 
-    <span data-ttu-id="7fead-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7fead-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e3392-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3392-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: weight
   fullName: weight
