--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2350e0a8c3989b823bc600e5e8cb40862906f532
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 60f8f2c34346e1609a4b538e2e499e750dc0081b
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116617"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575562"
 items:
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData
-  summary: <span data-ttu-id="7728f-101">用于更新 ShapeLineFormat 对象上的数据的接口, 用于在 "ShapeLineFormat" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="7728f-101">An interface for updating data on the ShapeLineFormat object, for use in "shapeLineFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="ce9fc-101">一个用于更新 ShapeLineFormat 对象上的数据的接口, 可用于 "ShapeLineFormat (</span><span class="sxs-lookup"><span data-stu-id="ce9fc-101">An interface for updating data on the ShapeLineFormat object, for use in "shapeLineFormat.set(</span></span><!-- --><span data-ttu-id="ce9fc-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="ce9fc-102"></span></span><!-- --><span data-ttu-id="ce9fc-103">)".</span><span class="sxs-lookup"><span data-stu-id="ce9fc-103"></span></span>
   name: Excel.Interfaces.ShapeLineFormatUpdateData
   fullName: Excel.Interfaces.ShapeLineFormatUpdateData
   langs:
@@ -23,10 +23,10 @@ items:
   - excel.Excel.Interfaces.ShapeLineFormatUpdateData.weight
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData.color
   summary: >-
-    <span data-ttu-id="7728f-102">代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="7728f-102">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+    <span data-ttu-id="ce9fc-104">代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-104">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
 
-    <span data-ttu-id="7728f-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7728f-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce9fc-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce9fc-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: color
   fullName: color
@@ -40,10 +40,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData.dashStyle
   summary: >-
-    <span data-ttu-id="7728f-104">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="7728f-104">Represents the line style of the shape.</span></span> <span data-ttu-id="7728f-105">当行不可见或具有混合的短划线样式属性 (例如, 形状的组合类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7728f-105">Returns null when line is not visible or has mixed line dash style property (e.g. group type of shape).</span></span> <span data-ttu-id="7728f-106">有关详细信息, 请参阅 ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="7728f-106">See Excel.ShapeLineStyle for details.</span></span>
+    <span data-ttu-id="ce9fc-106">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-106">Represents the line style of the shape.</span></span> <span data-ttu-id="ce9fc-107">如果行不可见或不一致的虚线样式, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-107">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="ce9fc-108">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-108">See Excel.ShapeLineStyle for details.</span></span>
 
 
-    <span data-ttu-id="7728f-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7728f-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce9fc-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce9fc-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: dashStyle
   fullName: dashStyle
@@ -57,10 +57,10 @@ items:
       - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData.style
   summary: >-
-    <span data-ttu-id="7728f-108">表示形状对象的线条样式。</span><span class="sxs-lookup"><span data-stu-id="7728f-108">Represents the line style of the shape object.</span></span> <span data-ttu-id="7728f-109">当行不可见或具有混合的行可见属性 (例如, 形状的组合类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7728f-109">Returns null when line is not visible or has mixed line visible property (e.g. group type of shape).</span></span> <span data-ttu-id="7728f-110">有关详细信息, 请参阅 ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="7728f-110">See Excel.ShapeLineStyle for details.</span></span>
+    <span data-ttu-id="ce9fc-110">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-110">Represents the line style of the shape.</span></span> <span data-ttu-id="ce9fc-111">如果行不可见或样式不一致, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-111">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="ce9fc-112">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-112">See Excel.ShapeLineStyle for details.</span></span>
 
 
-    <span data-ttu-id="7728f-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7728f-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce9fc-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce9fc-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: style
   fullName: style
@@ -74,10 +74,10 @@ items:
       - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData.transparency
   summary: >-
-    <span data-ttu-id="7728f-112">表示指定线条的透明度为 0.0 (不透明) 到 1.0 (清除) 的值的度数。</span><span class="sxs-lookup"><span data-stu-id="7728f-112">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="7728f-113">如果形状具有混和的线条透明度属性 (例如, shape 的 group 类型)), 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="7728f-113">Returns null when the shape has mixed line transparency property (e.g. group type of shape).</span></span>
+    <span data-ttu-id="ce9fc-114">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-114">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="ce9fc-115">如果形状具有不一致的透明胶片, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-115">Returns null when the shape has inconsistent transparencies.</span></span>
 
 
-    <span data-ttu-id="7728f-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7728f-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce9fc-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce9fc-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: transparency
   fullName: transparency
@@ -91,10 +91,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData.visible
   summary: >-
-    <span data-ttu-id="7728f-115">表示是否显示 shape 元素的线条格式。</span><span class="sxs-lookup"><span data-stu-id="7728f-115">Represents whether the line formatting of a shape element is visible.</span></span> <span data-ttu-id="7728f-116">当形状具有混合的线条可见属性 (例如, shape 的 group 类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7728f-116">Returns null when the shape has mixed line visible property (e.g. group type of shape).</span></span>
+    <span data-ttu-id="ce9fc-117">表示 shape 元素的行格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-117">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="ce9fc-118">如果形状具有不一致的 visibilities, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-118">Returns null when the shape has inconsistent visibilities.</span></span>
 
 
-    <span data-ttu-id="7728f-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7728f-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce9fc-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce9fc-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: visible
   fullName: visible
@@ -108,10 +108,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatUpdateData.weight
   summary: >-
-    <span data-ttu-id="7728f-118">表示线条的重量, 以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="7728f-118">Represents weight of the line, in points.</span></span> <span data-ttu-id="7728f-119">当行不可见或具有混合的线条粗细属性 (例如, 形状的组合类型) 时, 返回 null。</span><span class="sxs-lookup"><span data-stu-id="7728f-119">Returns null when the line is not visible or has mixed line weight property (e.g. group type of shape).</span></span>
+    <span data-ttu-id="ce9fc-120">表示线条的粗细, 以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-120">Represents the weight of the line, in points.</span></span> <span data-ttu-id="ce9fc-121">如果行不可见或线条粗细不一致, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="ce9fc-121">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
 
 
-    <span data-ttu-id="7728f-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7728f-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce9fc-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce9fc-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: weight
   fullName: weight
