--- a/docs/docs-ref-autogen/excel/excel.interfaces.workbookupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.workbookupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d60addeb8b9d2df80957db1df4de4ff37bfd47c9
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: c622902cefe0fc51a24d2db4bab0694e2c6d09eb
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098395"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575166"
 items:
 - uid: excel.Excel.Interfaces.WorkbookUpdateData
-  summary: <span data-ttu-id="e4ac2-101">一个用于更新工作簿对象上的数据的接口, 可用于 "工作簿.<!-- -->set ({...}"<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="e4ac2-101">An interface for updating data on the Workbook object, for use in "workbook.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="72292-101">一个用于更新工作簿对象上的数据的接口, 可用于 "工作簿. set (</span><span class="sxs-lookup"><span data-stu-id="72292-101">An interface for updating data on the Workbook object, for use in "workbook.set(</span></span><!-- --><span data-ttu-id="72292-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="72292-102"></span></span><!-- --><span data-ttu-id="72292-103">)".</span><span class="sxs-lookup"><span data-stu-id="72292-103"></span></span>
   name: Excel.Interfaces.WorkbookUpdateData
   fullName: Excel.Interfaces.WorkbookUpdateData
   langs:
@@ -22,10 +22,10 @@ items:
   - excel.Excel.Interfaces.WorkbookUpdateData.usePrecisionAsDisplayed
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.chartDataPointTrack
   summary: >-
-    <span data-ttu-id="e4ac2-102">如此如果工作簿中的所有图表都跟踪它们所附加到的实际数据点。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-102">True if all charts in the workbook are tracking the actual data points to which they are attached.</span></span> <span data-ttu-id="e4ac2-103">假如果图表跟踪数据点的索引。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-103">False if the charts track the index of the data points.</span></span>
+    <span data-ttu-id="72292-104">如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。</span><span class="sxs-lookup"><span data-stu-id="72292-104">True if all charts in the workbook are tracking the actual data points to which they are attached.</span></span> <span data-ttu-id="72292-105">假如果图表跟踪数据点的索引。</span><span class="sxs-lookup"><span data-stu-id="72292-105">False if the charts track the index of the data points.</span></span>
 
 
-    <span data-ttu-id="e4ac2-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4ac2-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="72292-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72292-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: chartDataPointTrack
   fullName: chartDataPointTrack
@@ -39,10 +39,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.isDirty
   summary: >-
-    <span data-ttu-id="e4ac2-105">如此如果指定的工作簿自上次保存以来未发生任何更改。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-105">True if no changes have been made to the specified workbook since it was last saved.</span></span> <span data-ttu-id="e4ac2-106">如果要关闭某个已更改的工作簿，但又不想保存它或者不想出现保存提示，则可将此属性设为 True。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-106">You can set this property to True if you want to close a modified workbook without either saving it or being prompted to save it.</span></span>
+    <span data-ttu-id="72292-107">指定自上次保存工作簿后是否进行过更改。</span><span class="sxs-lookup"><span data-stu-id="72292-107">Specifies whether or not changes have been made since the workbook was last saved.</span></span> <span data-ttu-id="72292-108">如果要关闭修改过的工作簿而不保存或提示保存它, 则可以将该属性设置为 true。</span><span class="sxs-lookup"><span data-stu-id="72292-108">You can set this property to true if you want to close a modified workbook without either saving it or being prompted to save it.</span></span>
 
 
-    <span data-ttu-id="e4ac2-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4ac2-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="72292-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72292-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isDirty
   fullName: isDirty
@@ -56,10 +56,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.properties
   summary: >-
-    <span data-ttu-id="e4ac2-108">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-108">Gets the workbook properties.</span></span>
+    <span data-ttu-id="72292-110">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="72292-110">Gets the workbook properties.</span></span>
 
 
-    <span data-ttu-id="e4ac2-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4ac2-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="72292-111">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72292-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: properties
   fullName: properties
   langs:
@@ -72,10 +72,10 @@ items:
       - excel.Excel.Interfaces.DocumentPropertiesUpdateData
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.use1904DateSystem
   summary: >-
-    <span data-ttu-id="e4ac2-110">如此如果工作簿使用1904日期系统。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-110">True if the workbook uses the 1904 date system.</span></span>
+    <span data-ttu-id="72292-112">如果工作簿使用 1904 日期系统，则为 True。</span><span class="sxs-lookup"><span data-stu-id="72292-112">True if the workbook uses the 1904 date system.</span></span>
 
 
-    <span data-ttu-id="e4ac2-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4ac2-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="72292-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72292-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: use1904DateSystem
   fullName: use1904DateSystem
@@ -89,10 +89,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.usePrecisionAsDisplayed
   summary: >-
-    <span data-ttu-id="e4ac2-112">如此如果工作簿中的计算将仅使用显示的数字的精度完成。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-112">True if calculations in this workbook will be done using only the precision of the numbers as they're displayed.</span></span> <span data-ttu-id="e4ac2-113">将此属性从 false 切换到 true 时, 数据将永久丢失精度。</span><span class="sxs-lookup"><span data-stu-id="e4ac2-113">Data will permanently lose accuracy when switching this property from false to true.</span></span>
+    <span data-ttu-id="72292-114">如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。</span><span class="sxs-lookup"><span data-stu-id="72292-114">True if calculations in this workbook will be done using only the precision of the numbers as they're displayed.</span></span> <span data-ttu-id="72292-115">将此属性从 false 切换到 true 时, 数据将永久丢失精度。</span><span class="sxs-lookup"><span data-stu-id="72292-115">Data will permanently lose accuracy when switching this property from false to true.</span></span>
 
 
-    <span data-ttu-id="e4ac2-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4ac2-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="72292-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72292-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: usePrecisionAsDisplayed
   fullName: usePrecisionAsDisplayed
