--- a/docs/docs-ref-autogen/excel/excel.pictureformat.yml
+++ b/docs/docs-ref-autogen/excel/excel.pictureformat.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1e8a1d28fa49f000b7dca6dab78a3a4593516a62
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ccb9a8c593f9574bcb0f82d7076f705eec179f08
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114419"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575541"
 items:
 - uid: excel.Excel.PictureFormat
-  summary: '<span data-ttu-id="1c492-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1c492-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="e5f46-101">图像的格式。</span><span class="sxs-lookup"><span data-stu-id="e5f46-101">The format of the image.</span></span>
+
+
+    <span data-ttu-id="e5f46-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5f46-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.PictureFormat
   fullName: Excel.PictureFormat
@@ -23,6 +27,7 @@ items:
   - excel.Excel.PictureFormat.svg
   - excel.Excel.PictureFormat.unknown
 - uid: excel.Excel.PictureFormat.bmp
+  summary: <span data-ttu-id="e5f46-103">位图图像。</span><span class="sxs-lookup"><span data-stu-id="e5f46-103">Bitmap image.</span></span>
   isPreview: true
   name: bmp
   fullName: bmp
@@ -31,6 +36,7 @@ items:
   type: field
   numericValue: "\"BMP\""
 - uid: excel.Excel.PictureFormat.gif
+  summary: <span data-ttu-id="e5f46-104">图形交换格式。</span><span class="sxs-lookup"><span data-stu-id="e5f46-104">Graphics Interchange Format.</span></span>
   isPreview: true
   name: gif
   fullName: gif
@@ -39,6 +45,7 @@ items:
   type: field
   numericValue: "\"GIF\""
 - uid: excel.Excel.PictureFormat.jpeg
+  summary: <span data-ttu-id="e5f46-105">联合图像专家组。</span><span class="sxs-lookup"><span data-stu-id="e5f46-105">Joint Photographic Experts Group.</span></span>
   isPreview: true
   name: jpeg
   fullName: jpeg
@@ -47,6 +54,7 @@ items:
   type: field
   numericValue: "\"JPEG\""
 - uid: excel.Excel.PictureFormat.png
+  summary: <span data-ttu-id="e5f46-106">可移植网络图形。</span><span class="sxs-lookup"><span data-stu-id="e5f46-106">Portable Network Graphics.</span></span>
   isPreview: true
   name: png
   fullName: png
@@ -55,6 +63,7 @@ items:
   type: field
   numericValue: "\"PNG\""
 - uid: excel.Excel.PictureFormat.svg
+  summary: <span data-ttu-id="e5f46-107">可缩放的矢量图形。</span><span class="sxs-lookup"><span data-stu-id="e5f46-107">Scalable Vector Graphic.</span></span>
   isPreview: true
   name: svg
   fullName: svg
