--- a/docs/docs-ref-autogen/excel/excel.placement.yml
+++ b/docs/docs-ref-autogen/excel/excel.placement.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 20822110e3411ad8d7679b13fb0c3450875b79f0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 731750b8dd696b71313750892464bd823cc585af
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107006"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575327"
 items:
 - uid: excel.Excel.Placement
-  summary: '<span data-ttu-id="46ecc-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46ecc-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="0cf53-101">指定对象附加到其下层单元格的方式。</span><span class="sxs-lookup"><span data-stu-id="0cf53-101">Specifies the way that an object is attached to its underlying cells.</span></span>
+
+
+    <span data-ttu-id="0cf53-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0cf53-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Placement
   fullName: Excel.Placement
@@ -20,6 +24,7 @@ items:
   - excel.Excel.Placement.oneCell
   - excel.Excel.Placement.twoCell
 - uid: excel.Excel.Placement.absolute
+  summary: <span data-ttu-id="0cf53-103">该对象是自由浮动的。</span><span class="sxs-lookup"><span data-stu-id="0cf53-103">The object is free floating.</span></span>
   isPreview: true
   name: absolute
   fullName: absolute
@@ -28,6 +33,7 @@ items:
   type: field
   numericValue: "\"Absolute\""
 - uid: excel.Excel.Placement.oneCell
+  summary: <span data-ttu-id="0cf53-104">该对象随单元格移动和调整大小。</span><span class="sxs-lookup"><span data-stu-id="0cf53-104">The object is moved and sized with the cells.</span></span>
   isPreview: true
   name: oneCell
   fullName: oneCell
@@ -36,6 +42,7 @@ items:
   type: field
   numericValue: "\"OneCell\""
 - uid: excel.Excel.Placement.twoCell
+  summary: <span data-ttu-id="0cf53-105">对象随单元格移动。</span><span class="sxs-lookup"><span data-stu-id="0cf53-105">The object is moved with the cells.</span></span>
   isPreview: true
   name: twoCell
   fullName: twoCell
