--- a/docs/docs-ref-autogen/excel/excel.savebehavior.yml
+++ b/docs/docs-ref-autogen/excel/excel.savebehavior.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b0fd2fedbed96e58b6756c59544ab26e71c696c1
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 33633e199f946a5494409240c8aef819ae608679
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116526"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575380"
 items:
 - uid: excel.Excel.SaveBehavior
   summary: >-
-    <span data-ttu-id="76219-101">指定工作簿的保存行为。保存 API。</span><span class="sxs-lookup"><span data-stu-id="76219-101">Specifies the save behavior for workbook.save API.</span></span>
+    <span data-ttu-id="4140f-101">指定工作簿的保存行为。保存 API。</span><span class="sxs-lookup"><span data-stu-id="4140f-101">Specifies the save behavior for Workbook.save API.</span></span>
 
 
-    <span data-ttu-id="76219-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="76219-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4140f-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4140f-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.SaveBehavior
   fullName: Excel.SaveBehavior
@@ -23,7 +23,7 @@ items:
   - excel.Excel.SaveBehavior.prompt
   - excel.Excel.SaveBehavior.save
 - uid: excel.Excel.SaveBehavior.prompt
-  summary: <span data-ttu-id="76219-103">如果工作簿尚未保存, 则提示用户 "saveas" 体验, 如果工作簿以前保存过, 则忽略该操作。</span><span class="sxs-lookup"><span data-stu-id="76219-103">Prompts the saveas experience to the user if the workbook has not been saved, Ignored if the workbook was previously saved.</span></span>
+  summary: <span data-ttu-id="4140f-103">如果工作簿尚未保存, 则提示用户 "saveas" 体验, 如果工作簿以前保存过, 则忽略该操作。</span><span class="sxs-lookup"><span data-stu-id="4140f-103">Prompts the saveas experience to the user if the workbook has not been saved, Ignored if the workbook was previously saved.</span></span>
   isPreview: true
   name: prompt
   fullName: prompt
@@ -32,7 +32,7 @@ items:
   type: field
   numericValue: "\"Prompt\""
 - uid: excel.Excel.SaveBehavior.save
-  summary: <span data-ttu-id="76219-104">保存工作簿, 而不提示用户。</span><span class="sxs-lookup"><span data-stu-id="76219-104">Save the workbook without prompting the user.</span></span> <span data-ttu-id="76219-105">如果文件未保存, 它将使用默认位置下的默认名称保存它。</span><span class="sxs-lookup"><span data-stu-id="76219-105">If file is not saved, it will save it with default name under default location.</span></span>
+  summary: <span data-ttu-id="4140f-104">保存工作簿, 而不提示用户。</span><span class="sxs-lookup"><span data-stu-id="4140f-104">Save the workbook without prompting the user.</span></span> <span data-ttu-id="4140f-105">如果文件未保存, 它将使用默认位置下的默认名称保存它。</span><span class="sxs-lookup"><span data-stu-id="4140f-105">If file is not saved, it will save it with default name under default location.</span></span>
   isPreview: true
   name: save
   fullName: save
