--- a/docs/docs-ref-autogen/excel/excel.shapedeactivatedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapedeactivatedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 26ae08f1f3877635c292c0dfc68a5669779ee756
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 90eeb4874bc29caae15c1bdb3d0c6f558c0da390
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117156"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575870"
 items:
 - uid: excel.Excel.ShapeDeactivatedEventArgs
   summary: >-
-    <span data-ttu-id="57b71-101">提供有关引发已停用事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="57b71-101">Provides information about the shape that raised the Deactivated event.</span></span>
+    <span data-ttu-id="5c015-101">提供有关引发已停用事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="5c015-101">Provides information about the shape that raised the Deactivated event.</span></span>
 
 
-    <span data-ttu-id="57b71-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57b71-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5c015-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c015-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeDeactivatedEventArgs
   fullName: Excel.ShapeDeactivatedEventArgs
@@ -25,10 +25,10 @@ items:
   - excel.Excel.ShapeDeactivatedEventArgs.worksheetId
 - uid: excel.Excel.ShapeDeactivatedEventArgs.shapeId
   summary: >-
-    <span data-ttu-id="57b71-103">获取已停用形状的 id。</span><span class="sxs-lookup"><span data-stu-id="57b71-103">Gets the id of the shape that is deactivated.</span></span>
+    <span data-ttu-id="5c015-103">获取形状停用的形状的 id。</span><span class="sxs-lookup"><span data-stu-id="5c015-103">Gets the id of the shape deactivated shape.</span></span>
 
 
-    <span data-ttu-id="57b71-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57b71-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5c015-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c015-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shapeId
   fullName: shapeId
@@ -42,10 +42,10 @@ items:
       - string
 - uid: excel.Excel.ShapeDeactivatedEventArgs.type
   summary: >-
-    <span data-ttu-id="57b71-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="57b71-105">Gets the type of the event.</span></span> <span data-ttu-id="57b71-106">有关详细信息, 请参阅 "Excel. 事件"。</span><span class="sxs-lookup"><span data-stu-id="57b71-106">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="5c015-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="5c015-105">Gets the type of the event.</span></span> <span data-ttu-id="5c015-106">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="5c015-106">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="57b71-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57b71-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5c015-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c015-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: type
   fullName: type
@@ -59,10 +59,10 @@ items:
       - "\"ShapeDeactivated\""
 - uid: excel.Excel.ShapeDeactivatedEventArgs.worksheetId
   summary: >-
-    <span data-ttu-id="57b71-108">获取已停用形状的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="57b71-108">Gets the id of the worksheet in which the shape is deactivated.</span></span>
+    <span data-ttu-id="5c015-108">获取其中的形状已停用的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="5c015-108">Gets the id of the worksheet in which the shape is deactivated.</span></span>
 
 
-    <span data-ttu-id="57b71-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57b71-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5c015-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c015-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: worksheetId
   fullName: worksheetId
