--- a/docs/docs-ref-autogen/excel/excel.shapefilltype.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapefilltype.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fb2b558e122fdcbe31e6134909f7e2d719f04f46
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 51700ca333a82e7e3cc5495a2174385025021d50
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105207"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575716"
 items:
 - uid: excel.Excel.ShapeFillType
-  summary: '<span data-ttu-id="e833d-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e833d-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="3dbfd-101">指定形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-101">Specifies a shape's fill type.</span></span>
+
+
+    <span data-ttu-id="3dbfd-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3dbfd-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeFillType
   fullName: Excel.ShapeFillType
@@ -23,6 +27,7 @@ items:
   - excel.Excel.ShapeFillType.pictureAndTexture
   - excel.Excel.ShapeFillType.solid
 - uid: excel.Excel.ShapeFillType.gradient
+  summary: <span data-ttu-id="3dbfd-103">渐变填充。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-103">Gradient fill.</span></span>
   isPreview: true
   name: gradient
   fullName: gradient
@@ -31,6 +36,7 @@ items:
   type: field
   numericValue: "\"Gradient\""
 - uid: excel.Excel.ShapeFillType.mixed
+  summary: <span data-ttu-id="3dbfd-104">混和填充。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-104">Mixed fill.</span></span>
   isPreview: true
   name: mixed
   fullName: mixed
@@ -39,6 +45,7 @@ items:
   type: field
   numericValue: "\"Mixed\""
 - uid: excel.Excel.ShapeFillType.noFill
+  summary: <span data-ttu-id="3dbfd-105">无填充。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-105">No fill.</span></span>
   isPreview: true
   name: noFill
   fullName: noFill
@@ -47,6 +54,7 @@ items:
   type: field
   numericValue: "\"NoFill\""
 - uid: excel.Excel.ShapeFillType.pattern
+  summary: <span data-ttu-id="3dbfd-106">图案填充。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-106">Pattern fill.</span></span>
   isPreview: true
   name: pattern
   fullName: pattern
@@ -55,6 +63,7 @@ items:
   type: field
   numericValue: "\"Pattern\""
 - uid: excel.Excel.ShapeFillType.pictureAndTexture
+  summary: <span data-ttu-id="3dbfd-107">图片和纹理填充。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-107">Picture and texture fill.</span></span>
   isPreview: true
   name: pictureAndTexture
   fullName: pictureAndTexture
@@ -63,6 +72,7 @@ items:
   type: field
   numericValue: "\"PictureAndTexture\""
 - uid: excel.Excel.ShapeFillType.solid
+  summary: <span data-ttu-id="3dbfd-108">单色填充。</span><span class="sxs-lookup"><span data-stu-id="3dbfd-108">Solid fill.</span></span>
   isPreview: true
   name: solid
   fullName: solid
