--- a/docs/docs-ref-autogen/excel/excel.shapefontunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapefontunderlinestyle.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e260bf500cb1f07b2565e33c5d87c3564c8edb4a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: e9ab0e465bdc785b38e532e393cb67e539691b15
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112382"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575373"
 items:
 - uid: excel.Excel.ShapeFontUnderlineStyle
-  summary: '<span data-ttu-id="88064-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88064-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="d4f16-101">应用于字体的下划线的类型。</span><span class="sxs-lookup"><span data-stu-id="d4f16-101">The type of underline applied to a font.</span></span>
+
+
+    <span data-ttu-id="d4f16-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d4f16-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeFontUnderlineStyle
   fullName: Excel.ShapeFontUnderlineStyle
