--- a/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0b20523f2176c62a8b08d8944129e693bcfa20b0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 165be27485a0cdd283421993910bce4f973d537f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109722"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575226"
 items:
 - uid: excel.Excel.ShapeLineStyle
-  summary: '<span data-ttu-id="35cd7-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35cd7-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="b30d6-101">线条的样式。</span><span class="sxs-lookup"><span data-stu-id="b30d6-101">The style for a line.</span></span>
+
+
+    <span data-ttu-id="b30d6-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b30d6-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeLineStyle
   fullName: Excel.ShapeLineStyle
@@ -22,6 +26,7 @@ items:
   - excel.Excel.ShapeLineStyle.thinThick
   - excel.Excel.ShapeLineStyle.thinThin
 - uid: excel.Excel.ShapeLineStyle.single
+  summary: <span data-ttu-id="b30d6-103">单线。</span><span class="sxs-lookup"><span data-stu-id="b30d6-103">Single line.</span></span>
   isPreview: true
   name: single
   fullName: single
@@ -30,6 +35,7 @@ items:
   type: field
   numericValue: "\"Single\""
 - uid: excel.Excel.ShapeLineStyle.thickBetweenThin
+  summary: <span data-ttu-id="b30d6-104">粗线每一侧各带一条细线。</span><span class="sxs-lookup"><span data-stu-id="b30d6-104">Thick line with a thin line on each side.</span></span>
   isPreview: true
   name: thickBetweenThin
   fullName: thickBetweenThin
@@ -38,6 +44,7 @@ items:
   type: field
   numericValue: "\"ThickBetweenThin\""
 - uid: excel.Excel.ShapeLineStyle.thickThin
+  summary: <span data-ttu-id="b30d6-105">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="b30d6-105">Thick line next to thin line.</span></span> <span data-ttu-id="b30d6-106">对于水平线, 粗线位于细线上方。</span><span class="sxs-lookup"><span data-stu-id="b30d6-106">For horizontal lines, the thick line is above the thin line.</span></span> <span data-ttu-id="b30d6-107">对于垂直线, 粗线位于细线的左侧。</span><span class="sxs-lookup"><span data-stu-id="b30d6-107">For vertical lines, the thick line is to the left of the thin line.</span></span>
   isPreview: true
   name: thickThin
   fullName: thickThin
@@ -46,6 +53,7 @@ items:
   type: field
   numericValue: "\"ThickThin\""
 - uid: excel.Excel.ShapeLineStyle.thinThick
+  summary: <span data-ttu-id="b30d6-108">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="b30d6-108">Thick line next to thin line.</span></span> <span data-ttu-id="b30d6-109">对于水平线, 粗线位于细线下方。</span><span class="sxs-lookup"><span data-stu-id="b30d6-109">For horizontal lines, the thick line is below the thin line.</span></span> <span data-ttu-id="b30d6-110">对于垂直线条, 粗线位于细线的右侧。</span><span class="sxs-lookup"><span data-stu-id="b30d6-110">For vertical lines, the thick line is to the right of the thin line.</span></span>
   isPreview: true
   name: thinThick
   fullName: thinThick
@@ -54,6 +62,7 @@ items:
   type: field
   numericValue: "\"ThinThick\""
 - uid: excel.Excel.ShapeLineStyle.thinThin
+  summary: <span data-ttu-id="b30d6-111">双细线。</span><span class="sxs-lookup"><span data-stu-id="b30d6-111">Two thin lines.</span></span>
   isPreview: true
   name: thinThin
   fullName: thinThin
