--- a/docs/docs-ref-autogen/excel/excel.shapescalefrom.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapescalefrom.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a496e8b131615398668c9cb65201bf57b72fa161
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: f3bc275239e5ba5e12b9376e29ab74f65d3c95e2
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108098"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575758"
 items:
 - uid: excel.Excel.ShapeScaleFrom
-  summary: '<span data-ttu-id="ed649-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ed649-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="028a0-101">指定在缩放形状时，该形状的哪一部分将保持在原有的位置。</span><span class="sxs-lookup"><span data-stu-id="028a0-101">Specifies which part of the shape retains its position when the shape is scaled.</span></span>
+
+
+    <span data-ttu-id="028a0-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="028a0-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeScaleFrom
   fullName: Excel.ShapeScaleFrom
