--- a/docs/docs-ref-autogen/excel/excel.shapescaletype.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapescaletype.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 69fd47e9c7d7085a2d65e59953ab7446718baa76
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 8eeddb217115ae3761e7eafe92cefc5918abfe56
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112032"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575940"
 items:
 - uid: excel.Excel.ShapeScaleType
-  summary: '<span data-ttu-id="9b5a3-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9b5a3-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="a61f3-101">指定是相对于形状的原始尺寸还是当前尺寸来对其进行缩放。</span><span class="sxs-lookup"><span data-stu-id="a61f3-101">Specifies whether the shape is scaled relative to its original or current size.</span></span>
+
+
+    <span data-ttu-id="a61f3-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a61f3-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeScaleType
   fullName: Excel.ShapeScaleType
