--- a/docs/docs-ref-autogen/excel/excel.shapetextreadingorder.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapetextreadingorder.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5224bcd90297330f3182c4a00883ca29f9b4fd39
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 4e4a5e6dd49583c61796820858f5447dfee1488f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106978"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575443"
 items:
 - uid: excel.Excel.ShapeTextReadingOrder
-  summary: '<span data-ttu-id="12296-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12296-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="56ee2-101">指定形状中的文本框架的阅读顺序。</span><span class="sxs-lookup"><span data-stu-id="56ee2-101">Specifies the reading order for the text frame in a shape.</span></span>
+
+
+    <span data-ttu-id="56ee2-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="56ee2-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeTextReadingOrder
   fullName: Excel.ShapeTextReadingOrder
@@ -16,21 +20,21 @@ items:
   type: enum
   package: excel
   children:
-  - excel.Excel.ShapeTextReadingOrder.ltr
-  - excel.Excel.ShapeTextReadingOrder.rtl
-- uid: excel.Excel.ShapeTextReadingOrder.ltr
+  - excel.Excel.ShapeTextReadingOrder.leftToRight
+  - excel.Excel.ShapeTextReadingOrder.rightToLeft
+- uid: excel.Excel.ShapeTextReadingOrder.leftToRight
   isPreview: true
-  name: ltr
-  fullName: ltr
+  name: leftToRight
+  fullName: leftToRight
   langs:
   - typeScript
   type: field
-  numericValue: "\"LTR\""
-- uid: excel.Excel.ShapeTextReadingOrder.rtl
+  numericValue: "\"LeftToRight\""
+- uid: excel.Excel.ShapeTextReadingOrder.rightToLeft
   isPreview: true
-  name: rtl
-  fullName: rtl
+  name: rightToLeft
+  fullName: rightToLeft
   langs:
   - typeScript
   type: field
-  numericValue: "\"RTL\""
+  numericValue: "\"RightToLeft\""
