--- a/docs/docs-ref-autogen/excel/excel.shapezorder.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapezorder.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d5fef8d0e045aa0e45825366f51c99448474732c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 1fdc4f1ed0374f6e8399b2b0f3cb5e23e2d065fc
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112956"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575135"
 items:
 - uid: excel.Excel.ShapeZOrder
-  summary: '<span data-ttu-id="5863a-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5863a-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: >-
+    <span data-ttu-id="93dd3-101">指定要将形状移动到的相对于其他形状的 z-顺序位置。</span><span class="sxs-lookup"><span data-stu-id="93dd3-101">Specifies where in the z-order a shape should be moved relative to other shapes.</span></span>
+
+
+    <span data-ttu-id="93dd3-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93dd3-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.ShapeZOrder
   fullName: Excel.ShapeZOrder
