--- a/docs/docs-ref-autogen/excel/excel.workbookautosavesettingchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.workbookautosavesettingchangedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9e78d9080407f2394d5278bb5a617237b52c5bd8
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 9bdbd9be65ae5e1124b2e123fccd53a7a2a3b94d
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106285"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575913"
 items:
 - uid: excel.Excel.WorkbookAutoSaveSettingChangedEventArgs
   summary: >-
-    <span data-ttu-id="28940-101">提供有关工作簿自动保存设置已更改事件的信息。</span><span class="sxs-lookup"><span data-stu-id="28940-101">Provides information about the workbook AutoSave setting changed event.</span></span>
+    <span data-ttu-id="520c7-101">提供有关工作簿的 onAutoSaveSettingChanged 事件的信息。</span><span class="sxs-lookup"><span data-stu-id="520c7-101">Provides information about the workbook's onAutoSaveSettingChanged event.</span></span>
 
 
-    <span data-ttu-id="28940-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28940-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="520c7-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="520c7-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.WorkbookAutoSaveSettingChangedEventArgs
   fullName: Excel.WorkbookAutoSaveSettingChangedEventArgs
@@ -23,10 +23,10 @@ items:
   - excel.Excel.WorkbookAutoSaveSettingChangedEventArgs.type
 - uid: excel.Excel.WorkbookAutoSaveSettingChangedEventArgs.type
   summary: >-
-    <span data-ttu-id="28940-103">表示事件的类型。</span><span class="sxs-lookup"><span data-stu-id="28940-103">Represents the type of the event.</span></span> <span data-ttu-id="28940-104">有关详细信息, 请参阅 "Excel. 事件"。</span><span class="sxs-lookup"><span data-stu-id="28940-104">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="520c7-103">表示事件的类型。</span><span class="sxs-lookup"><span data-stu-id="520c7-103">Represents the type of the event.</span></span> <span data-ttu-id="520c7-104">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="520c7-104">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="28940-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28940-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="520c7-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="520c7-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: type
   fullName: type
